@@ -1,4 +1,5 @@
-/* uDig - User Friendly Desktop Internet GIS client
+/**
+ * uDig - User Friendly Desktop Internet GIS client
  * http://udig.refractions.net
  * (C) 2004, Refractions Research Inc.
  *
@@ -15,29 +16,30 @@ import static org.junit.Assert.assertTrue;
 
 import java.io.IOException;
 
+import org.eclipse.core.runtime.IProgressMonitor;
+import org.eclipse.core.runtime.NullProgressMonitor;
+import org.junit.Test;
 import org.locationtech.udig.catalog.CatalogPlugin;
 import org.locationtech.udig.catalog.IResolve;
 import org.locationtech.udig.catalog.IResolveAdapterFactory;
 import org.locationtech.udig.catalog.IResolveManager;
 import org.locationtech.udig.catalog.tests.DummyService;
 
-import org.eclipse.core.runtime.IProgressMonitor;
-import org.eclipse.core.runtime.NullProgressMonitor;
-import org.junit.Test;
-
 /**
  * Test the resolve manager
+ *
  * @author Jesse
  * @since 1.1.0
  */
 public class ResolveManagerTest {
 
     IResolveManager resolveManager = CatalogPlugin.getDefault().getResolveManager();
-    DummyService service=new DummyService();
 
+    DummyService service = new DummyService();
 
     /**
-     * Test method for {@link org.locationtech.udig.catalog.internal.ResolveManager#canResolve(org.locationtech.udig.catalog.IResolve, java.lang.Class)}.
+     * Test method for
+     * {@link org.locationtech.udig.catalog.internal.ResolveManager#canResolve(org.locationtech.udig.catalog.IResolve, java.lang.Class)}.
      */
     @Test
     public void testCanResolve() {
@@ -45,27 +47,31 @@ public class ResolveManagerTest {
     }
 
     /**
-     * Test method for {@link org.locationtech.udig.catalog.internal.ResolveManager#registerResolves(org.locationtech.udig.catalog.IResolveAdapterFactory)}.
+     * Test method for
+     * {@link org.locationtech.udig.catalog.internal.ResolveManager#registerResolves(org.locationtech.udig.catalog.IResolveAdapterFactory)}.
      */
     @Test
     public void testRegisterResolves() {
         assertFalse(resolveManager.canResolve(service, Integer.class));
         IResolveAdapterFactory factory = new IResolveAdapterFactory() {
 
+            @Override
             public <T> T adapt(IResolve resolve, Class<T> adapter, IProgressMonitor monitor)
                     throws IOException {
-                if( adapter == Integer.class ){
-                    return adapter.cast( new Integer(1) );
+                if (adapter == Integer.class) {
+                    return adapter.cast(Integer.valueOf(1));
                 }
                 return null;
             }
 
+            @Override
             public boolean canAdapt(IResolve resolve, Class adapter) {
                 return adapter == Integer.class;
             }
 
+            @Override
             public String toString() {
-                return "Generic ResolveAdapterFactory";
+                return "Generic ResolveAdapterFactory"; //$NON-NLS-1$
             }
         };
         resolveManager.registerResolves(factory);
@@ -75,7 +81,8 @@ public class ResolveManagerTest {
     }
 
     /**
-     * Test method for {@link org.locationtech.udig.catalog.internal.ResolveManager#resolve(org.locationtech.udig.catalog.IResolve, java.lang.Class, IProgressMonitor)}.
+     * Test method for
+     * {@link org.locationtech.udig.catalog.internal.ResolveManager#resolve(org.locationtech.udig.catalog.IResolve, java.lang.Class, IProgressMonitor)}.
      */
     @Test
     public void testResolve() throws Exception {
@@ -83,41 +90,45 @@ public class ResolveManagerTest {
     }
 
     /**
-     * Test method for {@link org.locationtech.udig.catalog.internal.ResolveManager#unregisterResolves(org.locationtech.udig.catalog.IResolveAdapterFactory, java.lang.Class)}.
+     * Test method for
+     * {@link org.locationtech.udig.catalog.internal.ResolveManager#unregisterResolves(org.locationtech.udig.catalog.IResolveAdapterFactory, java.lang.Class)}.
      */
     @Test
     public void testUnregisterResolvesIResolveAdapterFactoryClass() {
-        IResolveAdapterFactory factory = new IResolveAdapterFactory(){
-            
-            public <T> T adapt( IResolve resolve, Class<T> adapter, IProgressMonitor monitor ) throws IOException {
-                if( adapter == Integer.class ){
-                    return adapter.cast( Integer.valueOf(1) );                   
-                }
-                else if (adapter == Float.class ){
-                    return adapter.cast( Float.valueOf(2.0f));
+        IResolveAdapterFactory factory = new IResolveAdapterFactory() {
+
+            @Override
+            public <T> T adapt(IResolve resolve, Class<T> adapter, IProgressMonitor monitor)
+                    throws IOException {
+                if (adapter == Integer.class) {
+                    return adapter.cast(Integer.valueOf(1));
+                } else if (adapter == Float.class) {
+                    return adapter.cast(Float.valueOf(2.0f));
                 }
                 return null; // unable to handle this one
-             }
+            }
 
-            public boolean canAdapt( IResolve resolve, Class adapter ) {
+            @Override
+            public boolean canAdapt(IResolve resolve, Class adapter) {
                 return adapter == Integer.class || adapter == Float.class;
             }
-            
+
+            @Override
             public String toString() {
-                return "Generic ResolveAdapterFactory";
+                return "Generic ResolveAdapterFactory"; //$NON-NLS-1$
             }
         };
 
         resolveManager.registerResolves(factory);
-        
+
         assertTrue(resolveManager.canResolve(service, Integer.class));
         assertTrue(resolveManager.canResolve(service, Float.class));
-        
+
         resolveManager.unregisterResolves(factory, Integer.class);
-        
+
         assertFalse(resolveManager.canResolve(service, Integer.class));
         assertTrue(resolveManager.canResolve(service, Float.class));
-        
+
     }
 
 }
