@@ -1,7 +1,7 @@
-/*
- *    uDig - User Friendly Desktop Internet GIS client
- *    http://udig.refractions.net
- *    (C) 2004, Refractions Research Inc.
+/**
+ * uDig - User Friendly Desktop Internet GIS client
+ * http://udig.refractions.net
+ * (C) 2004, Refractions Research Inc.
  *
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
@@ -10,9 +10,6 @@
  *
  */
 package org.locationtech.udig.style.sld.raster.internal;
-
-import org.locationtech.udig.style.sld.SLDEditorPart;
-import org.locationtech.udig.ui.graphics.SLDs;
 
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.events.SelectionAdapter;
@@ -27,81 +24,70 @@ import org.eclipse.swt.widgets.Scale;
 import org.eclipse.swt.widgets.Text;
 import org.geotools.styling.RasterSymbolizer;
 import org.geotools.styling.StyleBuilder;
+import org.locationtech.udig.style.sld.SLDEditorPart;
+import org.locationtech.udig.ui.graphics.SLDs;
 
 /**
  * A quick raster symbolizer that can only vary opacity.
- * 
+ *
  * @author aalam
  * @since 0.6.0
  */
 public class SLDRasterEditorPart extends SLDEditorPart implements SelectionListener {
 
     private Composite myparent;
+
     private Scale opacityScale;
+
     private Text opacityText;
 
-    /*
-     * (non-Javadoc)
-     * 
-     * @see org.locationtech.udig.style.sld.SLDEditorPart#getContentType()
-     */
+    @Override
     public Class getContentType() {
         return RasterSymbolizer.class;
     }
 
-    /*
-     * (non-Javadoc)
-     * 
-     * @see org.locationtech.udig.style.sld.SLDEditorPart#init()
-     */
+    @Override
     public void init() {
-        //Nothing to do...
+        // Nothing to do...
     }
 
-    /*
-     * (non-Javadoc)
-     * 
-     * @see org.locationtech.udig.style.sld.SLDEditorPart#reset()
-     */
+    @Override
     public void reset() {
-        // initialize the ui
+        // initialize the UI
         setStylingElements((RasterSymbolizer) getContent());
     }
 
-    private void setStylingElements( RasterSymbolizer symbolizer ) {
-         double number = SLDs.rasterOpacity(symbolizer);
-         int opacity = (new Double(number * 100)).intValue();
-               
-         opacityScale.setSelection(opacity);
-         opacityText.setText(Integer.toString(opacity) + "%"); //$NON-NLS-1$
-         opacityText.pack(true);
+    private void setStylingElements(RasterSymbolizer symbolizer) {
+        double number = SLDs.rasterOpacity(symbolizer);
+        int opacity = (Double.valueOf(number * 100)).intValue();
+
+        opacityScale.setSelection(opacity);
+        opacityText.setText(Integer.toString(opacity) + "%"); //$NON-NLS-1$
+        opacityText.pack(true);
     }
 
-    /*
-     * (non-Javadoc)
-     * 
-     * @see org.locationtech.udig.style.sld.SLDEditorPart#createPartControl(org.eclipse.swt.widgets.Composite)
-     */
-    protected Control createPartControl( Composite parent ) {
+    @Override
+    protected Control createPartControl(Composite parent) {
         myparent = parent;
         RowLayout layout = new RowLayout();
         myparent.setLayout(layout);
         layout.pack = false;
         layout.wrap = true;
         layout.type = SWT.HORIZONTAL;
-        
+
         /* Border Opacity */
         Group borderOpacityArea = new Group(myparent, SWT.NONE);
         borderOpacityArea.setLayout(new GridLayout(2, false));
-        borderOpacityArea.setText(Messages.SLDRasterEditorPart_rasterOpactity_label); 
-        
+        borderOpacityArea.setText(Messages.SLDRasterEditorPart_rasterOpactity_label);
+
         opacityScale = new Scale(borderOpacityArea, SWT.HORIZONTAL);
         opacityScale.setMinimum(0);
         opacityScale.setMaximum(100);
         opacityScale.setPageIncrement(10);
-        opacityScale.setBounds(0,0,10,SWT.DEFAULT);
-        opacityScale.addSelectionListener(new SelectionAdapter(){
-            public void widgetSelected( SelectionEvent e ) {
+        opacityScale.setBounds(0, 0, 10, SWT.DEFAULT);
+        opacityScale.addSelectionListener(new SelectionAdapter() {
+            @Override
+            public void widgetSelected(SelectionEvent e) {
                 opacityText.setText(String.valueOf(opacityScale.getSelection()) + "%"); //$NON-NLS-1$
                 opacityText.pack(true);
             }
@@ -114,27 +100,16 @@ public class SLDRasterEditorPart extends SLDEditorPart implements SelectionListe
         return parent;
     }
 
-    /*
-     * (non-Javadoc)
-     * 
-     * @see org.eclipse.swt.events.SelectionListener#widgetDefaultSelected(org.eclipse.swt.events.SelectionEvent)
-     */
-    public void widgetDefaultSelected( SelectionEvent e ) {
+    @Override
+    public void widgetDefaultSelected(SelectionEvent e) {
         // Meh! Meh I say!
     }
 
-    /*
-     * (non-Javadoc)
-     * 
-     * @see org.eclipse.swt.events.SelectionListener#widgetSelected(org.eclipse.swt.events.SelectionEvent)
-     */
-    public void widgetSelected( SelectionEvent e ) {
+    @Override
+    public void widgetSelected(SelectionEvent e) {
         apply();
     }
 
-    /**
-     * TODO summary sentence for apply ...
-     */
     public void apply() {
         RasterSymbolizer symbolizer = (RasterSymbolizer) getContent();
         StyleBuilder styleBuilder = getStyleBuilder();
