@@ -1,13 +1,13 @@
-/*
-*    uDig - User Friendly Desktop Internet GIS client
-*    http://udig.refractions.net
-*    (C) 2012, Refractions Research Inc.
-*
-* All rights reserved. This program and the accompanying materials
-* are made available under the terms of the Eclipse Public License v1.0
-* (http://www.eclipse.org/legal/epl-v10.html), and the Refractions BSD
-* License v1.0 (http://udig.refractions.net/files/bsd3-v10.html).
-*/
+/**
+ * uDig - User Friendly Desktop Internet GIS client
+ * http://udig.refractions.net
+ * (C) 2012, Refractions Research Inc.
+ *
+ * All rights reserved. This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License v1.0
+ * (http://www.eclipse.org/legal/epl-v10.html), and the Refractions BSD
+ * License v1.0 (http://udig.refractions.net/files/bsd3-v10.html).
+ */
 package org.locationtech.udig.style.sld.editor;
 
 import java.awt.Color;
@@ -129,98 +129,152 @@ import org.opengis.util.ProgressListener;
 public class StyleThemePage extends StyleEditorPage {
 
     private static final int COMBO_ATTRIBUTES = 1;
+
     static final int COMBO_CLASSES = 2;
+
     static final int COMBO_BREAKTYPE = 3;
+
     private static final int COMBO_NORMALIZE = 4;
+
     private static final int COMBO_ELSE = 5;
+
     static final int COMBO_PALETTES = 6;
+
     private static final int COMBO_OPACITY = 7;
+
     private static final int COMBO_BORDER_COLOR = 8;
 
     private static final int LABEL_SEPARATOR_BOTTOM = 12;
+
     private static final int LABEL_STATUSBAR = 13;
 
     private static final int LABEL_ICON_COLORBLIND = 14;
+
     private static final int LABEL_ICON_PHOTOCOPY = 15;
+
     private static final int LABEL_ICON_PROJECTOR = 16;
+
     private static final int LABEL_ICON_LCD = 17;
+
     private static final int LABEL_ICON_CRT = 18;
+
     private static final int LABEL_ICON_PRINT = 19;
 
     static final int BUTTON_COLORBLIND = 20;
+
     static final int BUTTON_PHOTOCOPY = 21;
+
     static final int BUTTON_PROJECTOR = 22;
+
     static final int BUTTON_LCD = 23;
+
     static final int BUTTON_CRT = 24;
+
     static final int BUTTON_PRINT = 25;
+
     private static final int BUTTON_REMOVE = 26;
 
     private static final int COMPOSITE_PARENT = 30;
+
     private static final int COMPOSITE_TOP = 31;
+
     private static final int COMPOSITE_MIDDLE = 32;
+
     private static final int COMPOSITE_BOTTOM = 33;
+
     private static final int COMPOSITE_BOTTOM_LEFT = 34;
 
-    // Key for saving the opacity in the layer's blackboard.  String formatted
+    // Key for saving the opacity in the layer's blackboard. String formatted
     // red-green-blue
     private static final String BORDER_COLOR_KEY = "theme_page_border_color"; //$NON-NLS-1$
-    // Key for saving the opacity in the layer's blackboard.  Integer
-    private static final String OPACITY_KEY = "theme_page_opacity";
-    // Key for saving the AttributeDescriptor in the layer's blackboard.  String
-    private static final String ATTRIBUTE_KEY = "theme_page_attribute";
-    // Key for saving the Number of classes in the layer's blackboard.  Integer
-    private static final String CLASSES_KEY = "theme_page_classes";
-    // Key for saving the BreakType in the layer's blackboard.  Integer
-    private static final String BREAK_KEY = "theme_page_break";
-    // Key for saving the normalize attribute in the layer's blackboard.  String
-    private static final String NORMALIZE_KEY = "theme_page_normalize";
-    // Key for saving the else in the layer's blackboard.  Boolean
-    private static final String ELSE_KEY = "theme_page_else";
-    // Key for saving the Palette category in the layer's blackboard.  String
-    private static final String PALETTE_CATEGORY_KEY = "theme_page_palette_category";
-    // Key for saving the Colorblind in the layer's blackboard.  Boolean
-    private static final String COLOR_BLIND_KEY = "theme_page_color_blind";
-    // Key for saving the CRT in the layer's blackboard.  Boolean
-    private static final String CRT_KEY = "theme_page_crt";
-    // Key for saving the Projector in the layer's blackboard.  Boolean
-    private static final String PROJECTOR_KEY = "theme_page_projector";
-    // Key for saving the LCD in the layer's blackboard.  Boolean
-    private static final String LCD_KEY = "theme_page_lcd";
-    // Key for saving the Printing in the layer's blackboard.  Boolean
-    private static final String PRINT_KEY = "theme_page_print";
-    // Key for saving the photocopy in the layer's blackboard.  Boolean
-    private static final String PHOTO_COPY_KEY = "theme_page_copy";
-    // Key for saving the Palette in the layer's blackboard.  String (palette name)
-    private static final String PALETTE_KEY = "theme_page_palette";
+    // Key for saving the opacity in the layer's blackboard. Integer
+
+    private static final String OPACITY_KEY = "theme_page_opacity"; //$NON-NLS-1$
+
+    // Key for saving the AttributeDescriptor in the layer's blackboard. String
+    private static final String ATTRIBUTE_KEY = "theme_page_attribute"; //$NON-NLS-1$
+
+    // Key for saving the Number of classes in the layer's blackboard. Integer
+    private static final String CLASSES_KEY = "theme_page_classes"; //$NON-NLS-1$
+
+    // Key for saving the BreakType in the layer's blackboard. Integer
+    private static final String BREAK_KEY = "theme_page_break"; //$NON-NLS-1$
+
+    // Key for saving the normalize attribute in the layer's blackboard. String
+    private static final String NORMALIZE_KEY = "theme_page_normalize"; //$NON-NLS-1$
+
+    // Key for saving the else in the layer's blackboard. Boolean
+    private static final String ELSE_KEY = "theme_page_else"; //$NON-NLS-1$
+
+    // Key for saving the Palette category in the layer's blackboard. String
+    private static final String PALETTE_CATEGORY_KEY = "theme_page_palette_category"; //$NON-NLS-1$
+
+    // Key for saving the Colorblind in the layer's blackboard. Boolean
+    private static final String COLOR_BLIND_KEY = "theme_page_color_blind"; //$NON-NLS-1$
+
+    // Key for saving the CRT in the layer's blackboard. Boolean
+    private static final String CRT_KEY = "theme_page_crt"; //$NON-NLS-1$
+
+    // Key for saving the Projector in the layer's blackboard. Boolean
+    private static final String PROJECTOR_KEY = "theme_page_projector"; //$NON-NLS-1$
+
+    // Key for saving the LCD in the layer's blackboard. Boolean
+    private static final String LCD_KEY = "theme_page_lcd"; //$NON-NLS-1$
+
+    // Key for saving the Printing in the layer's blackboard. Boolean
+    private static final String PRINT_KEY = "theme_page_print"; //$NON-NLS-1$
+
+    // Key for saving the photocopy in the layer's blackboard. Boolean
+    private static final String PHOTO_COPY_KEY = "theme_page_copy"; //$NON-NLS-1$
+
+    // Key for saving the Palette in the layer's blackboard. String (palette name)
+    private static final String PALETTE_KEY = "theme_page_palette"; //$NON-NLS-1$
+
     // Key for memento which contains the custom palette's colors
-    private static final String CUSTOM_PALETTE = "custom_palette_key";
+    private static final String CUSTOM_PALETTE = "custom_palette_key"; //$NON-NLS-1$
 
+    private HashMap<Integer, Control> pageControls = new HashMap<>();
 
-    private HashMap<Integer,Control> pageControls = new HashMap<Integer,Control>();
-    private List<String> numericAttr = new ArrayList<String>();
+    private List<String> numericAttr = new ArrayList<>();
+
     private double[] opacity;
 
-    private HashMap<Integer, String> controlNames = new HashMap<Integer, String>();
-    private HashMap<Integer, Integer> viewerQuality = new HashMap<Integer, Integer>();
-    private HashMap<String, Integer> uniqueCounts = new HashMap<String, Integer>();
+    private HashMap<Integer, String> controlNames = new HashMap<>();
+
+    private HashMap<Integer, Integer> viewerQuality = new HashMap<>();
+
+    private HashMap<String, Integer> uniqueCounts = new HashMap<>();
 
     private ColorBrewer brewer;
+
     private boolean reverseColours = false;
+
     private StyleGenerator sg;
+
     private AttributeDescriptor selectedAttributeType;
+
     private AttributeDescriptor normalize;
+
     private ClassificationFunction function;
+
     private Classifier classifier;
+
     private TableSettings tableSettings;
+
     private boolean elseSelection = true;
 
     private FilterFactory2 ff;
+
     private FeatureCollection<SimpleFeatureType, SimpleFeature> collection;
-    private  FeatureSource<SimpleFeatureType, SimpleFeature> source;
+
+    private FeatureSource<SimpleFeatureType, SimpleFeature> source;
+
     private StyleBuilder sb;
 
     TableViewer paletteTable;
+
     TreeViewer treeViewer;
+
     BrewerPalette customPalette = null;
 
     /**
@@ -229,15 +283,15 @@ public class StyleThemePage extends StyleEditorPage {
      * The Classifer contains "Summary" or "Histogram" information about the FeatureCollection and
      * is used as a basis for style generation.
      */
-    //ExplicitClassifier customBreak = null;
+    // ExplicitClassifier customBreak = null;
     Classifier customBreak = null;
 
     public StyleThemePage() {
-        //create factories
+        // create factories
         ff = (FilterFactory2) CommonFactoryFinder.getFilterFactory(GeoTools.getDefaultHints());
         sb = new StyleBuilder(ff);
 
-        //suitability icons
+        // suitability icons
         controlNames.put(LABEL_ICON_COLORBLIND, Messages.StyleEditor_theme_suitability_colour);
         controlNames.put(LABEL_ICON_CRT, Messages.StyleEditor_theme_suitability_crt);
         controlNames.put(LABEL_ICON_LCD, Messages.StyleEditor_theme_suitability_lcd);
@@ -245,7 +299,7 @@ public class StyleThemePage extends StyleEditorPage {
         controlNames.put(LABEL_ICON_PRINT, Messages.StyleEditor_theme_suitability_print);
         controlNames.put(LABEL_ICON_PROJECTOR, Messages.StyleEditor_theme_suitability_proj);
 
-        //suitability toggle buttons
+        // suitability toggle buttons
         controlNames.put(BUTTON_COLORBLIND, Messages.StyleEditor_theme_suitability_colour);
         controlNames.put(BUTTON_CRT, Messages.StyleEditor_theme_suitability_crt);
         controlNames.put(BUTTON_LCD, Messages.StyleEditor_theme_suitability_lcd);
@@ -253,7 +307,7 @@ public class StyleThemePage extends StyleEditorPage {
         controlNames.put(BUTTON_PRINT, Messages.StyleEditor_theme_suitability_print);
         controlNames.put(BUTTON_PROJECTOR, Messages.StyleEditor_theme_suitability_proj);
 
-        //suitability icon - palette suitability lookup
+        // suitability icon - palette suitability lookup
         viewerQuality.put(PaletteSuitability.VIEWER_COLORBLIND, LABEL_ICON_COLORBLIND);
         viewerQuality.put(PaletteSuitability.VIEWER_CRT, LABEL_ICON_CRT);
         viewerQuality.put(PaletteSuitability.VIEWER_LCD, LABEL_ICON_LCD);
@@ -284,8 +338,10 @@ public class StyleThemePage extends StyleEditorPage {
         if (widget instanceof Composite) {
             layout = ((Composite) widget).getLayoutData();
         }
-        if (layout instanceof GridData) return (GridData) layout;
-        else return new GridData(); //return empty, or throw exception (null)?
+        if (layout instanceof GridData)
+            return (GridData) layout;
+        else
+            return new GridData(); // return empty, or throw exception (null)?
     }
 
     public Object getControl(int widgetID) {
@@ -309,6 +365,7 @@ public class StyleThemePage extends StyleEditorPage {
         return true;
     }
 
+    @Override
     public boolean okToLeave() {
         return true;
     }
@@ -318,6 +375,7 @@ public class StyleThemePage extends StyleEditorPage {
         return true;
     }
 
+    @Override
     public boolean performOk() {
         return true;
     }
@@ -325,7 +383,7 @@ public class StyleThemePage extends StyleEditorPage {
     @Override
     public void dispose() {
         super.dispose();
-        //collection.purge();
+        // collection.purge();
         collection = null;
         source = null;
     }
@@ -341,12 +399,12 @@ public class StyleThemePage extends StyleEditorPage {
 
             // add custom palettes
             List<BrewerPalette> palettesList = CustomPalettesLoader.PALETTESLIST;
-            for( BrewerPalette brewerPalette : palettesList ) {
+            for (BrewerPalette brewerPalette : palettesList) {
                 brewer.registerPalette(brewerPalette);
             }
             // add a dynamic one that support everythings
             TABLE[] dynamicPalettes = CustomDynamicPalette.TABLE.values();
-            for( TABLE colorTable : dynamicPalettes ) {
+            for (TABLE colorTable : dynamicPalettes) {
                 CustomDynamicPalette customDynamicPalette = new CustomDynamicPalette(colorTable);
                 brewer.registerPalette(customDynamicPalette);
             }
@@ -373,7 +431,7 @@ public class StyleThemePage extends StyleEditorPage {
         } else {
             tooltip = Messages.StyleEditor_theme_suitability_hide;
         }
-        toggle.setToolTipText(tooltip+" "+controlNames.get(buttonId)); //$NON-NLS-1$
+        toggle.setToolTipText(tooltip + " " + controlNames.get(buttonId)); //$NON-NLS-1$
     }
 
     private void createSuitabilityIcon(Composite parent, int id, String tooltip, Image image) {
@@ -386,24 +444,26 @@ public class StyleThemePage extends StyleEditorPage {
     }
 
     @Override
-    public void createPageContent( Composite parent2 ) {
+    public void createPageContent(Composite parent2) {
         Composite parent = new Composite(parent2, SWT.NONE);
         parent.setLayout(new GridLayout());
         GridData gridData2 = new GridData(SWT.FILL, SWT.FILL, true, true);
         gridData2.heightHint = 500;
         parent.setLayoutData(gridData2);
-        //create the featureCollection
+        // create the featureCollection
         IProgressMonitor monitor = new NullProgressMonitor();
         try {
-            source = getSelectedLayer().getResource(FeatureSource.class, monitor); //monitor
-            if (source == null) return;
+            source = getSelectedLayer().getResource(FeatureSource.class, monitor); // monitor
+            if (source == null)
+                return;
             collection = source.getFeatures();
         } catch (IOException e) {
-            SLDPlugin.log("StyleThemePage.createPageContent() failed to create FeatureCollection", e); //$NON-NLS-1$
+            SLDPlugin.log("StyleThemePage.createPageContent() failed to create FeatureCollection", //$NON-NLS-1$
+                    e);
             return;
         }
 
-        //create the content
+        // create the content
         pageControls.put(COMPOSITE_PARENT, parent);
         Font font = getShell().getFont();
 
@@ -425,7 +485,7 @@ public class StyleThemePage extends StyleEditorPage {
 
         createPaletteEditorComposite(parent, font);
 
-        //create status bar
+        // create status bar
         Label status = new Label(parent, SWT.NONE);
         gridData = new GridData(SWT.FILL, SWT.BOTTOM, true, false);
         status.setLayoutData(gridData);
@@ -476,7 +536,8 @@ public class StyleThemePage extends StyleEditorPage {
 
         treeViewer.addSelectionChangedListener(new ISelectionChangedListener() {
 
-            public void selectionChanged( SelectionChangedEvent event ) {
+            @Override
+            public void selectionChanged(SelectionChangedEvent event) {
 
                 if (((StructuredSelection) event.getSelection()).isEmpty()) {
                     getButton(BUTTON_REMOVE).setEnabled(false);
@@ -489,9 +550,9 @@ public class StyleThemePage extends StyleEditorPage {
         });
 
         treeViewer.setCellModifier(new IPaletteCellEditor(this));
-        treeViewer.setColumnProperties(new String[] {"colour", "title", "styleExpr"}); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
+        treeViewer.setColumnProperties(new String[] { "colour", "title", "styleExpr" }); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
         treeViewer.setCellEditors(editors);
-        //populate the tree
+        // populate the tree
 
         Composite compBottomRight = new Composite(compBottom, SWT.NONE);
         compBottomRight.setLayoutData(new GridData(SWT.RIGHT, SWT.FILL, false, false));
@@ -501,7 +562,6 @@ public class StyleThemePage extends StyleEditorPage {
         compBottomRight.setLayout(layout);
 
         createSuitabilityDisplay(compBottomRight);
-
 
         return compBottom;
     }
@@ -522,18 +582,29 @@ public class StyleThemePage extends StyleEditorPage {
         layout.marginWidth = 0;
         icons.setLayout(layout);
 
-        createSuitabilityIcon(icons, LABEL_ICON_COLORBLIND, Messages.StyleEditor_theme_suitability_colour, SLDPlugin.getDefault().getImageDescriptor(ImageConstants.COLORBLIND_ICON).createImage());
-        createSuitabilityIcon(icons, LABEL_ICON_CRT, Messages.StyleEditor_theme_suitability_crt, SLDPlugin.getDefault().getImageDescriptor(ImageConstants.CRT_ICON).createImage());
-        createSuitabilityIcon(icons, LABEL_ICON_PROJECTOR, Messages.StyleEditor_theme_suitability_proj, SLDPlugin.getDefault().getImageDescriptor(ImageConstants.PROJECTOR_ICON).createImage());
-        createSuitabilityIcon(icons, LABEL_ICON_LCD, Messages.StyleEditor_theme_suitability_lcd, SLDPlugin.getDefault().getImageDescriptor(ImageConstants.LAPTOP_ICON).createImage());
-        createSuitabilityIcon(icons, LABEL_ICON_PRINT, Messages.StyleEditor_theme_suitability_print, SLDPlugin.getDefault().getImageDescriptor(ImageConstants.PRINTER_ICON).createImage());
-        createSuitabilityIcon(icons, LABEL_ICON_PHOTOCOPY, Messages.StyleEditor_theme_suitability_pcopy, SLDPlugin.getDefault().getImageDescriptor(ImageConstants.PHOTOCOPY_ICON).createImage());
+        createSuitabilityIcon(icons, LABEL_ICON_COLORBLIND,
+                Messages.StyleEditor_theme_suitability_colour, SLDPlugin.getDefault()
+                        .getImageDescriptor(ImageConstants.COLORBLIND_ICON).createImage());
+        createSuitabilityIcon(icons, LABEL_ICON_CRT, Messages.StyleEditor_theme_suitability_crt,
+                SLDPlugin.getDefault().getImageDescriptor(ImageConstants.CRT_ICON).createImage());
+        createSuitabilityIcon(icons, LABEL_ICON_PROJECTOR,
+                Messages.StyleEditor_theme_suitability_proj, SLDPlugin.getDefault()
+                        .getImageDescriptor(ImageConstants.PROJECTOR_ICON).createImage());
+        createSuitabilityIcon(icons, LABEL_ICON_LCD, Messages.StyleEditor_theme_suitability_lcd,
+                SLDPlugin.getDefault().getImageDescriptor(ImageConstants.LAPTOP_ICON)
+                        .createImage());
+        createSuitabilityIcon(icons, LABEL_ICON_PRINT, Messages.StyleEditor_theme_suitability_print,
+                SLDPlugin.getDefault().getImageDescriptor(ImageConstants.PRINTER_ICON)
+                        .createImage());
+        createSuitabilityIcon(icons, LABEL_ICON_PHOTOCOPY,
+                Messages.StyleEditor_theme_suitability_pcopy, SLDPlugin.getDefault()
+                        .getImageDescriptor(ImageConstants.PHOTOCOPY_ICON).createImage());
     }
 
     private CellEditor[] createCellEditors() {
         CellEditor[] editors = new CellEditor[3];
 
-        //TODO: create a nicer color chooser
+        // TODO: create a nicer color chooser
         CellEditor celledit0 = new ColorCellEditor(treeViewer.getTree());
         TextCellEditor celledit1 = new TextCellEditor(treeViewer.getTree());
         TextCellEditor celledit2 = new TextCellEditor(treeViewer.getTree());
@@ -550,7 +621,8 @@ public class StyleThemePage extends StyleEditorPage {
      */
     private Tree createPaletteEditorTreeViewer(Composite compBottomLeft, Font font) {
         GridData gridData;
-        treeViewer = new TreeViewer(compBottomLeft, SWT.BORDER | SWT.H_SCROLL | SWT.V_SCROLL | SWT.FULL_SELECTION);
+        treeViewer = new TreeViewer(compBottomLeft,
+                SWT.BORDER | SWT.H_SCROLL | SWT.V_SCROLL | SWT.FULL_SELECTION);
         Tree treeTable = treeViewer.getTree();
         treeTable.setHeaderVisible(true);
         treeTable.setLinesVisible(true);
@@ -576,7 +648,7 @@ public class StyleThemePage extends StyleEditorPage {
         tableSettings.setColumnMin(0, 50);
 
         treeViewer.setLabelProvider(new StyleTreeLabelProvider());
-        treeViewer.setSorter(new StyleTreeSorter());
+        treeViewer.setComparator(new StyleTreeSorter());
         treeViewer.setContentProvider(new StyleTreeContentProvider());
 
         treeViewer.setInput(getFTS());
@@ -593,10 +665,9 @@ public class StyleThemePage extends StyleEditorPage {
     /**
      * Creates the Opacity Reverse and Remove controls
      */
-    private void createPaletteEditorControls(Font font,
-            Composite compBottomLeftButtons) {
+    private void createPaletteEditorControls(Font font, Composite compBottomLeftButtons) {
         Composite combos = new Composite(compBottomLeftButtons, SWT.NONE);
-        combos.setLayout(new GridLayout(2,false));
+        combos.setLayout(new GridLayout(2, false));
         createOpacityControls(font, combos);
         createBorderControls(font, combos);
         createReverseButton(compBottomLeftButtons);
@@ -612,18 +683,21 @@ public class StyleThemePage extends StyleEditorPage {
         removeButton.setEnabled(false);
         removeButton.addSelectionListener(new SelectionListener() {
 
-            public void widgetSelected( SelectionEvent e ) {
+            @Override
+            public void widgetSelected(SelectionEvent e) {
                 StructuredSelection selection = (StructuredSelection) treeViewer.getSelection();
-                if (selection.isEmpty()) return;
+                if (selection.isEmpty())
+                    return;
                 Rule rule = (Rule) selection.getFirstElement();
                 if (removeRule(rule)) {
                     treeViewer.refresh();
                 } else {
-                    //freak out
+                    // freak out
                 }
             }
 
-            public void widgetDefaultSelected( SelectionEvent e ) {
+            @Override
+            public void widgetDefaultSelected(SelectionEvent e) {
                 widgetSelected(e);
             }
 
@@ -639,28 +713,30 @@ public class StyleThemePage extends StyleEditorPage {
         reverseButton.setText(Messages.StyleEditor_theme_reverse);
         reverseButton.addSelectionListener(new SelectionListener() {
 
-            public void widgetSelected( SelectionEvent e ) {
-                reverseColours = !reverseColours; //used by generateTheme to get things half right
+            @Override
+            public void widgetSelected(SelectionEvent e) {
+                reverseColours = !reverseColours; // used by generateTheme to get things half right
                 FeatureTypeStyle fts = getFTS();
                 List<Rule> ruleList = fts.rules();
                 for (int i = 0; i < (ruleList.size() / 2); i++) {
-                    swapColours(ruleList.get(i), ruleList.get(ruleList.size()-i-1));
+                    swapColours(ruleList.get(i), ruleList.get(ruleList.size() - i - 1));
                 }
                 treeViewer.refresh();
             }
 
-            public void widgetDefaultSelected( SelectionEvent e ) {
+            @Override
+            public void widgetDefaultSelected(SelectionEvent e) {
                 widgetSelected(e);
             }
 
         });
     }
 
-    private void createBorderControls( Font font, Composite compBottomLeftButtons ) {
+    private void createBorderControls(Font font, Composite compBottomLeftButtons) {
         GridData gridData;
         Label opacityLabel = new Label(compBottomLeftButtons, SWT.NONE);
         opacityLabel.setFont(font);
-        opacityLabel.setText("Outline");
+        opacityLabel.setText("Outline"); //$NON-NLS-1$
         gridData = new GridData(SWT.LEFT, SWT.DEFAULT, false, false);
         opacityLabel.setLayoutData(gridData);
 
@@ -671,25 +747,26 @@ public class StyleThemePage extends StyleEditorPage {
         colorCombo.select(0);
         boolean polygonCompatible = isPolygonCompatible();
         colorCombo.setEnabled(polygonCompatible);
-        if( polygonCompatible ){
+        if (polygonCompatible) {
             colorCombo.addSelectionListener(new BorderColorComboListener(this));
         }
     }
 
     private boolean isPolygonCompatible() {
-        Class<?> type = getSelectedLayer().getSchema().getGeometryDescriptor().getType().getBinding();
-        if( LineString.class.isAssignableFrom(type) || MultiLineString.class.isAssignableFrom(type)
-                || LinearRing.class.isAssignableFrom(type)){
+        Class<?> type = getSelectedLayer().getSchema().getGeometryDescriptor().getType()
+                .getBinding();
+        if (LineString.class.isAssignableFrom(type) || MultiLineString.class.isAssignableFrom(type)
+                || LinearRing.class.isAssignableFrom(type)) {
             return false;
         }
         return true;
     }
+
     /**
      * @param font
      * @param compBottomLeftButtons
      */
-    private void createOpacityControls(Font font,
-            Composite compBottomLeftButtons) {
+    private void createOpacityControls(Font font, Composite compBottomLeftButtons) {
         GridData gridData;
         Label opacityLabel = new Label(compBottomLeftButtons, SWT.NONE);
         opacityLabel.setFont(font);
@@ -701,10 +778,10 @@ public class StyleThemePage extends StyleEditorPage {
         pageControls.put(COMBO_OPACITY, opacityCombo);
         opacity = new double[11];
         for (int i = 0; i < 11; i++) {
-            opacityCombo.add(Integer.toString(i*10)+"%"); //$NON-NLS-1$
+            opacityCombo.add(Integer.toString(i * 10) + "%"); //$NON-NLS-1$
             opacity[i] = i / 10.0;
         }
-        opacityCombo.select(5); //default 50%
+        opacityCombo.select(5); // default 50%
         opacityCombo.setVisibleItemCount(8);
         opacityCombo.addSelectionListener(new SimpleComboListener());
     }
@@ -736,8 +813,9 @@ public class StyleThemePage extends StyleEditorPage {
 
         createPaletteFilterComposite(font, compMiddle3);
 
-        //list of matching palettes
-        paletteTable = new TableViewer(new Table(compMiddle, SWT.BORDER | SWT.V_SCROLL | SWT.FULL_SELECTION));
+        // list of matching palettes
+        paletteTable = new TableViewer(
+                new Table(compMiddle, SWT.BORDER | SWT.V_SCROLL | SWT.FULL_SELECTION));
         TableLayout tableLayout = new TableLayout();
         tableLayout.addColumnData(new ColumnWeightData(1, 20, false));
         TableColumn firstColumn = new TableColumn(paletteTable.getTable(), SWT.LEFT);
@@ -753,7 +831,7 @@ public class StyleThemePage extends StyleEditorPage {
         paletteTable.setContentProvider(new BrewerPaletteContentProvider(this));
 
         paletteTable.addFilter(new BrewerPaletteViewerFilter(this));
-        paletteTable.setSorter(new BrewerPaletteViewerSorter());
+        paletteTable.setComparator(new BrewerPaletteViewerSorter());
 
         paletteTable.setInput(getBrewer());
         paletteTable.addSelectionChangedListener(new PalettesListener());
@@ -762,7 +840,8 @@ public class StyleThemePage extends StyleEditorPage {
     }
 
     /**
-     * Creates the palette type chooser and the buttons to filter for parameters such as color blindness.
+     * Creates the palette type chooser and the buttons to filter for parameters such as color
+     * blindness.
      */
     private void createPaletteFilterComposite(Font font, Composite compMiddle3) {
         GridLayout layout;
@@ -785,11 +864,13 @@ public class StyleThemePage extends StyleEditorPage {
         paletteFilter.setToolTipText(Messages.StyleEditor_theme_palette_tip);
         paletteFilter.addSelectionListener(new SelectionListener() {
 
-            public void widgetSelected( SelectionEvent e ) {
+            @Override
+            public void widgetSelected(SelectionEvent e) {
                 paletteTable.refresh();
             }
 
-            public void widgetDefaultSelected( SelectionEvent e ) {
+            @Override
+            public void widgetDefaultSelected(SelectionEvent e) {
                 widgetSelected(e);
             }
 
@@ -803,13 +884,19 @@ public class StyleThemePage extends StyleEditorPage {
         layout.horizontalSpacing = 0;
         compMiddle4.setLayout(layout);
 
-        //toggle buttons
-        createToggleButton(compMiddle4, BUTTON_COLORBLIND, SLDPlugin.getDefault().getImageDescriptor(ImageConstants.COLORBLIND_ICON).createImage());
-        createToggleButton(compMiddle4, BUTTON_CRT, SLDPlugin.getDefault().getImageDescriptor(ImageConstants.CRT_ICON).createImage());
-        createToggleButton(compMiddle4, BUTTON_PROJECTOR, SLDPlugin.getDefault().getImageDescriptor(ImageConstants.PROJECTOR_ICON).createImage());
-        createToggleButton(compMiddle4, BUTTON_LCD, SLDPlugin.getDefault().getImageDescriptor(ImageConstants.LAPTOP_ICON).createImage());
-        createToggleButton(compMiddle4, BUTTON_PRINT, SLDPlugin.getDefault().getImageDescriptor(ImageConstants.PRINTER_ICON).createImage());
-        createToggleButton(compMiddle4, BUTTON_PHOTOCOPY, SLDPlugin.getDefault().getImageDescriptor(ImageConstants.PHOTOCOPY_ICON).createImage());
+        // toggle buttons
+        createToggleButton(compMiddle4, BUTTON_COLORBLIND, SLDPlugin.getDefault()
+                .getImageDescriptor(ImageConstants.COLORBLIND_ICON).createImage());
+        createToggleButton(compMiddle4, BUTTON_CRT,
+                SLDPlugin.getDefault().getImageDescriptor(ImageConstants.CRT_ICON).createImage());
+        createToggleButton(compMiddle4, BUTTON_PROJECTOR, SLDPlugin.getDefault()
+                .getImageDescriptor(ImageConstants.PROJECTOR_ICON).createImage());
+        createToggleButton(compMiddle4, BUTTON_LCD, SLDPlugin.getDefault()
+                .getImageDescriptor(ImageConstants.LAPTOP_ICON).createImage());
+        createToggleButton(compMiddle4, BUTTON_PRINT, SLDPlugin.getDefault()
+                .getImageDescriptor(ImageConstants.PRINTER_ICON).createImage());
+        createToggleButton(compMiddle4, BUTTON_PHOTOCOPY, SLDPlugin.getDefault()
+                .getImageDescriptor(ImageConstants.PHOTOCOPY_ICON).createImage());
     }
 
     private Composite createPaletteLabel(Font font, Composite compMiddle) {
@@ -830,8 +917,8 @@ public class StyleThemePage extends StyleEditorPage {
     }
 
     /**
-     * Creates the composite that contains the information about what attributes to theme by
-     * and the type of theme.
+     * Creates the composite that contains the information about what attributes to theme by and the
+     * type of theme.
      */
     private Composite createTopComponent(Composite parent, Font font) {
         Composite compTop = new Composite(parent, SWT.NONE);
@@ -846,7 +933,6 @@ public class StyleThemePage extends StyleEditorPage {
         createAttributeLabels(font, compTop);
 
         createAttributeCombos(compTop);
-
 
         return compTop;
     }
@@ -898,7 +984,7 @@ public class StyleThemePage extends StyleEditorPage {
         attributeCombo.setLayout(new GridLayout());
         gridData = createDefaultGridData();
         attributeCombo.setLayoutData(gridData);
-        //populate the comboBox
+        // populate the comboBox
         StyleLayer selectedLayer = getSelectedLayer();
         if (selectedLayer != null) {
             loadWithAttributeTypes(attributeCombo, selectedLayer);
@@ -913,11 +999,11 @@ public class StyleThemePage extends StyleEditorPage {
         classesCombo.setLayoutData(gridData);
 
         for (int i = 2; i < 13; i++) {
-            Integer j = (Integer) i;
+            Integer j = i;
             classesCombo.add(j.toString());
         }
 
-        classesCombo.select(3); //default is 5 classes
+        classesCombo.select(3); // default is 5 classes
         classesCombo.setVisibleItemCount(16);
         classesCombo.addListener(SWT.Modify, new ClassesComboListener());
 
@@ -950,28 +1036,27 @@ public class StyleThemePage extends StyleEditorPage {
         elseCombo.addSelectionListener(new ElseComboListener());
     }
 
-    private void loadWithAttributeTypes(Combo attributeCombo,
-            StyleLayer selectedLayer) {
+    private void loadWithAttributeTypes(Combo attributeCombo, StyleLayer selectedLayer) {
         SimpleFeatureType featureType = selectedLayer.getSchema();
 
         if (featureType != null) {
-                    List<String> attributesList = new ArrayList<String>();
-                    for (int i = 0; i < featureType.getAttributeCount(); i++) {
-                        AttributeDescriptor attributeType = featureType.getDescriptor(i);
-                        if (!(attributeType instanceof GeometryDescriptor)) { // don't include the geometry
-                            attributesList.add(attributeType.getName().getLocalPart());
-                            if (isNumber(attributeType)) {
-                                numericAttr.add(attributeType.getName().getLocalPart());
-                            }
-                        }
+            List<String> attributesList = new ArrayList<>();
+            for (int i = 0; i < featureType.getAttributeCount(); i++) {
+                AttributeDescriptor attributeType = featureType.getDescriptor(i);
+                if (!(attributeType instanceof GeometryDescriptor)) { // don't include the geometry
+                    attributesList.add(attributeType.getName().getLocalPart());
+                    if (isNumber(attributeType)) {
+                        numericAttr.add(attributeType.getName().getLocalPart());
                     }
+                }
+            }
 
-                    // sort alphabetical
-                    Collections.sort(attributesList);
-                    attributeCombo.removeAll();
-                    attributeCombo.setItems(attributesList.toArray(new String[] {}));
+            // sort alphabetical
+            Collections.sort(attributesList);
+            attributeCombo.removeAll();
+            attributeCombo.setItems(attributesList.toArray(new String[] {}));
 
-            //select the first numeric attribute that isn't ID
+            // select the first numeric attribute that isn't ID
             int index = -1;
             if (numericAttr.size() > 1) {
                 if (numericAttr.get(0).equalsIgnoreCase("id")) { //$NON-NLS-1$
@@ -982,24 +1067,28 @@ public class StyleThemePage extends StyleEditorPage {
             } else if (numericAttr.size() == 1) {
                 index = attributeCombo.indexOf(numericAttr.get(0));
             }
-            if (index > -1) attributeCombo.select(index);
+            if (index > -1)
+                attributeCombo.select(index);
             if (attributeCombo.getSelectionIndex() == -1) {
-                //we couldn't find a desirable attribute, just grab the first one
+                // we couldn't find a desirable attribute, just grab the first one
                 if (featureType.getAttributeCount() > 0) {
                     attributeCombo.select(0);
                 }
             }
         }
     }
+
     private boolean removeRule(Rule rule) {
         Style style = getStyle();
 
-        if (style.featureTypeStyles().isEmpty()) return false;
+        if (style.featureTypeStyles().isEmpty())
+            return false;
 
-        for(FeatureTypeStyle featureTypeStyle: style.featureTypeStyles()) {
-            if( featureTypeStyle == null ) continue;
-            boolean removed = featureTypeStyle.rules().remove( rule );
-            if( removed ){
+        for (FeatureTypeStyle featureTypeStyle : style.featureTypeStyles()) {
+            if (featureTypeStyle == null)
+                continue;
+            boolean removed = featureTypeStyle.rules().remove(rule);
+            if (removed) {
                 return true;
             }
         }
@@ -1007,33 +1096,40 @@ public class StyleThemePage extends StyleEditorPage {
     }
 
     @Override
-    public void styleChanged( Object source ) {
+    public void styleChanged(Object source) {
         // ignore
     }
+
     private void swapColours(Rule rule1, Rule rule2) {
         Symbolizer[] symb1 = rule1.getSymbolizers();
         Symbolizer[] symb2 = rule2.getSymbolizers();
         if (symb1.length != symb2.length) {
-            SLDPlugin.log("StyleThemePage.swapColours(): Number of symbolizers each rule and not equal - aborting colour swap", null); //$NON-NLS-1$
+            SLDPlugin.log(
+                    "StyleThemePage.swapColours(): Number of symbolizers each rule and not equal - aborting colour swap", //$NON-NLS-1$
+                    null);
             return;
         }
         Expression tempColour;
         for (int i = 0; i < symb1.length; i++) {
             if (symb1[i] instanceof PolygonSymbolizer) {
                 tempColour = ((PolygonSymbolizer) symb1[i]).getFill().getColor();
-                ((PolygonSymbolizer) symb1[i]).getFill().setColor(((PolygonSymbolizer) symb2[i]).getFill().getColor());
+                ((PolygonSymbolizer) symb1[i]).getFill()
+                        .setColor(((PolygonSymbolizer) symb2[i]).getFill().getColor());
                 ((PolygonSymbolizer) symb2[i]).getFill().setColor(tempColour);
             } else if (symb1[i] instanceof PointSymbolizer) {
-                GraphicalSymbol g1 = ((PointSymbolizer)symb1[i]).getGraphic().graphicalSymbols().get(0);
-                GraphicalSymbol g2 = ((PointSymbolizer)symb2[i]).getGraphic().graphicalSymbols().get(0);
+                GraphicalSymbol g1 = ((PointSymbolizer) symb1[i]).getGraphic().graphicalSymbols()
+                        .get(0);
+                GraphicalSymbol g2 = ((PointSymbolizer) symb2[i]).getGraphic().graphicalSymbols()
+                        .get(0);
                 if (g1 instanceof Mark && g2 instanceof Mark) {
-                    tempColour = ((Mark)g1).getFill().getColor();
-                    ((Mark)g1).getFill().setColor( ((Mark)g2).getFill().getColor() );
-                    ((Mark)g2).getFill().setColor( tempColour );
+                    tempColour = ((Mark) g1).getFill().getColor();
+                    ((Mark) g1).getFill().setColor(((Mark) g2).getFill().getColor());
+                    ((Mark) g2).getFill().setColor(tempColour);
                 }
             } else if (symb1[i] instanceof LineSymbolizer) {
                 tempColour = ((LineSymbolizer) symb1[i]).getStroke().getColor();
-                ((LineSymbolizer) symb1[i]).getStroke().setColor(((LineSymbolizer) symb2[i]).getStroke().getColor());
+                ((LineSymbolizer) symb1[i]).getStroke()
+                        .setColor(((LineSymbolizer) symb2[i]).getStroke().getColor());
                 ((LineSymbolizer) symb2[i]).getStroke().setColor(tempColour);
             }
         }
@@ -1049,25 +1145,27 @@ public class StyleThemePage extends StyleEditorPage {
     }
 
     private class AttributeComboListener implements Listener {
+        @Override
         public void handleEvent(Event e) {
-            //record the attribute
+            // record the attribute
             selectedAttributeType = getAttributeType(getCombo(COMBO_ATTRIBUTES).getText());
-            //update the normalization combo
+            // update the normalization combo
             updateNormalize();
-            //update the classification type (breaks) combo
+            // update the classification type (breaks) combo
             updateBreaks();
             if (isNumber(selectedAttributeType)) {
-                //clear the status label
+                // clear the status label
                 setStatusText(""); //$NON-NLS-1$
             } else {
-                //TODO: don't use strings to match break types
-                if (getCombo(COMBO_BREAKTYPE).getText().equalsIgnoreCase(Messages.StyleEditor_theme_uniques)) {
-                    //determine if we've already calculated the number of unique values
+                // TODO: don't use strings to match break types
+                if (getCombo(COMBO_BREAKTYPE).getText()
+                        .equalsIgnoreCase(Messages.StyleEditor_theme_uniques)) {
+                    // determine if we've already calculated the number of unique values
                     String attribute = selectedAttributeType.getName().getLocalPart();
                     if (uniqueCounts.containsKey(attribute)) {
                         updateUnique(attribute, uniqueCounts.get(attribute));
                     }
-                    //count the number of unique attributes
+                    // count the number of unique attributes
                     int uniqueCount = -1;
                     try {
                         Expression attr = ff.property(attribute);
@@ -1082,19 +1180,20 @@ public class StyleThemePage extends StyleEditorPage {
                         updateUnique(attribute, uniqueCount);
                     }
                 } else {
-                    //clear the status label
+                    // clear the status label
                     setStatusText(""); //$NON-NLS-1$
                 }
             }
 
-            //calculate the color scheme, if we have enough information
-            if (inputsValid()) generateTheme();
+            // calculate the color scheme, if we have enough information
+            if (inputsValid())
+                generateTheme();
             return;
         }
 
-
         private void updateUnique(String attr, int uniqueCount) {
-            setStatusText(MessageFormat.format(Messages.StyleEditor_theme_unique_values, uniqueCount, attr));
+            setStatusText(MessageFormat.format(Messages.StyleEditor_theme_unique_values,
+                    uniqueCount, attr));
             if (uniqueCount < 12) {
                 if (getCombo(COMBO_ELSE).getSelectionIndex() > 0) {
                     getCombo(COMBO_CLASSES).select(uniqueCount - 1);
@@ -1109,8 +1208,10 @@ public class StyleThemePage extends StyleEditorPage {
 
     private class PalettesListener implements ISelectionChangedListener {
 
+        @Override
         public void selectionChanged(SelectionChangedEvent event) {
-            if (inputsValid()) generateTheme();
+            if (inputsValid())
+                generateTheme();
         }
 
     }
@@ -1123,53 +1224,63 @@ public class StyleThemePage extends StyleEditorPage {
             this.id = id;
         }
 
-        public void widgetSelected( SelectionEvent e ) {
+        @Override
+        public void widgetSelected(SelectionEvent e) {
             updateToggleTooltip(id);
             updatePalettes();
         }
 
-        public void widgetDefaultSelected( SelectionEvent e ) {
+        @Override
+        public void widgetDefaultSelected(SelectionEvent e) {
             widgetSelected(e);
         }
 
     }
 
     private class ClassesComboListener implements Listener {
-        public void handleEvent( Event event ) {
+        @Override
+        public void handleEvent(Event event) {
             updatePalettes();
-            if (inputsValid()) generateTheme();
+            if (inputsValid())
+                generateTheme();
             return;
         }
 
     }
 
     private class ElseComboListener implements SelectionListener {
+        @Override
         public void widgetSelected(SelectionEvent e) {
             int index = getCombo(COMBO_ELSE).getSelectionIndex();
             int classesIndex = getCombo(COMBO_CLASSES).getSelectionIndex();
-            if (elseSelection && index == 0) { //else rule was turned off
+            if (elseSelection && index == 0) { // else rule was turned off
                 if (classesIndex > 0) {
                     getCombo(COMBO_CLASSES).select(classesIndex - 1);
                 }
-            } else if (!elseSelection && index != 0) { //else rule was turned on
+            } else if (!elseSelection && index != 0) { // else rule was turned on
                 if (classesIndex < (getCombo(COMBO_CLASSES).getItemCount() - 1)) {
                     getCombo(COMBO_CLASSES).select(classesIndex + 1);
                 }
             }
             elseSelection = (index > 0);
-            if (inputsValid()) generateTheme();
+            if (inputsValid())
+                generateTheme();
         }
 
+        @Override
         public void widgetDefaultSelected(SelectionEvent e) {
             widgetSelected(e);
         }
     }
 
     private class SimpleComboListener implements SelectionListener {
+        @Override
         public void widgetSelected(SelectionEvent e) {
-            if (inputsValid()) generateTheme();
+            if (inputsValid())
+                generateTheme();
         }
 
+        @Override
         public void widgetDefaultSelected(SelectionEvent e) {
             widgetSelected(e);
         }
@@ -1184,19 +1295,23 @@ public class StyleThemePage extends StyleEditorPage {
         String currentAttr = getCombo(COMBO_ATTRIBUTES).getText();
         String value = breaksCombo.getText();
         breaksCombo.removeAll();
-        if (isNumber(currentAttr)) { //show numeric break types
+        if (isNumber(currentAttr)) { // show numeric break types
             breaksCombo.add(Messages.StyleEditor_theme_equalInterval);
             breaksCombo.add(Messages.StyleEditor_theme_quantile);
             breaksCombo.add(Messages.StyleEditor_theme_uniques);
-            //breaksCombo.add(Messages.StyleEditor_theme_standardDeviation);
+            // breaksCombo.add(Messages.StyleEditor_theme_standardDeviation);
             int index = breaksCombo.indexOf(value);
-            if (index > -1) breaksCombo.select(index);
-            else breaksCombo.select(1);
-        } else { //show categorical break types
+            if (index > -1)
+                breaksCombo.select(index);
+            else
+                breaksCombo.select(1);
+        } else { // show categorical break types
             breaksCombo.add(Messages.StyleEditor_theme_uniques);
             int index = breaksCombo.indexOf(value);
-            if (index > -1) breaksCombo.select(index);
-            else breaksCombo.select(0);
+            if (index > -1)
+                breaksCombo.select(index);
+            else
+                breaksCombo.select(0);
         }
     }
 
@@ -1214,8 +1329,10 @@ public class StyleThemePage extends StyleEditorPage {
                     normalizeCombo.add(attr);
             }
             int index = normalizeCombo.indexOf(value);
-            if (index > 1) normalizeCombo.select(index);
-            else normalizeCombo.select(0); //default is "< NONE >"
+            if (index > 1)
+                normalizeCombo.select(index);
+            else
+                normalizeCombo.select(0); // default is "< NONE >"
         } else {
             normalizeCombo.select(0);
             normalizeCombo.setEnabled(false);
@@ -1223,14 +1340,18 @@ public class StyleThemePage extends StyleEditorPage {
     }
 
     boolean inputsValid() {
-        if (getCombo(COMBO_ATTRIBUTES).getText().length() < 1) return false;
-        else if (paletteTable.getSelection().isEmpty()) return false;
-        else if (getCombo(COMBO_CLASSES).getText().length() < 1) return false;
-        else return true;
+        if (getCombo(COMBO_ATTRIBUTES).getText().length() < 1)
+            return false;
+        else if (paletteTable.getSelection().isEmpty())
+            return false;
+        else if (getCombo(COMBO_CLASSES).getText().length() < 1)
+            return false;
+        else
+            return true;
     }
 
     void generateTheme() {
-        customPalette=null;
+        customPalette = null;
         if (selectedAttributeType == null) {
             selectedAttributeType = getAttributeType(getCombo(COMBO_ATTRIBUTES).getText());
         }
@@ -1240,10 +1361,11 @@ public class StyleThemePage extends StyleEditorPage {
             normalize = getAttributeType(getCombo(COMBO_NORMALIZE).getText());
         }
 
-        //generate the defaults
-        Runnable genDefault = new Runnable(){
+        // generate the defaults
+        Runnable genDefault = new Runnable() {
+            @Override
             public void run() {
-                //generate the expression
+                // generate the expression
                 Expression expr = null;
                 Expression attr = ff.property(selectedAttributeType.getName());
 
@@ -1254,28 +1376,32 @@ public class StyleThemePage extends StyleEditorPage {
                     expr = attr;
                 }
 
-                StructuredSelection structuredSelection = (StructuredSelection) paletteTable.getSelection();
+                StructuredSelection structuredSelection = (StructuredSelection) paletteTable
+                        .getSelection();
                 BrewerPalette pal = (BrewerPalette) structuredSelection.getFirstElement();
                 if (pal == null) {
                     // get it from the last memento used
                     StyleBlackboard bb = getSelectedLayer().getStyleBlackboard();
                     IMemento memento = (IMemento) bb.get(DialogSettingsStyleContent.EXTENSION_ID);
                     String paletteName = memento.getString(PALETTE_KEY);
-                    if (paletteName == null) return;
+                    if (paletteName == null)
+                        return;
                     pal = getBrewer().getPalette(paletteName);
                 }
                 String paletteName = pal.getName();
                 Combo combo = getCombo(COMBO_CLASSES);
-                int numClasses = new Integer(combo.getText()).intValue();
-                int[] suitability =null;
-                try{
+                int numClasses = Integer.valueOf(combo.getText()).intValue();
+                int[] suitability = null;
+                try {
                     suitability = pal.getPaletteSuitability().getSuitability(numClasses);
-                }catch (Exception e) {
-                    suitability = CustomUnknownPaletteSuitability.getInstance().getSuitability(numClasses);
+                } catch (Exception e) {
+                    suitability = CustomUnknownPaletteSuitability.getInstance()
+                            .getSuitability(numClasses);
                 }
 
-                //check for custom classifier
-                if (getCombo(COMBO_BREAKTYPE).getText().equalsIgnoreCase(Messages.StyleEditor_theme_custom)) {
+                // check for custom classifier
+                if (getCombo(COMBO_BREAKTYPE).getText()
+                        .equalsIgnoreCase(Messages.StyleEditor_theme_custom)) {
                     classifier = customBreak;
                 }
 
@@ -1283,71 +1409,94 @@ public class StyleThemePage extends StyleEditorPage {
                 if (classifier == null) {
                     classifierModified = true;
                 } else {
-                    //determine if the classifier needs recalculation
-                    if (function.getClasses() != new Integer(getCombo(COMBO_CLASSES).getText()).intValue()) {
-                        if (getCombo(COMBO_ELSE).getSelectionIndex() == 0) classifierModified = true;
-                        if (function.getClasses() != new Integer(getCombo(COMBO_CLASSES).getText()).intValue()-1)
+                    // determine if the classifier needs recalculation
+                    if (function.getClasses() != Integer.valueOf(getCombo(COMBO_CLASSES).getText())
+                            .intValue()) {
+                        if (getCombo(COMBO_ELSE).getSelectionIndex() == 0)
+                            classifierModified = true;
+                        if (function.getClasses() != Integer
+                                .valueOf(getCombo(COMBO_CLASSES).getText()).intValue() - 1)
                             classifierModified = true;
                     }
                     if (getCombo(COMBO_ELSE).getSelectionIndex() > 0)
                         classifierModified = true;
-                    else if (getCombo(COMBO_BREAKTYPE).getText().equalsIgnoreCase(Messages.StyleEditor_theme_custom))
+                    else if (getCombo(COMBO_BREAKTYPE).getText()
+                            .equalsIgnoreCase(Messages.StyleEditor_theme_custom))
                         classifierModified = true;
-                    else if ((getCombo(COMBO_BREAKTYPE).getText().equalsIgnoreCase(Messages.StyleEditor_theme_equalInterval)) && !(function instanceof EqualIntervalFunction))
+                    else if ((getCombo(COMBO_BREAKTYPE).getText()
+                            .equalsIgnoreCase(Messages.StyleEditor_theme_equalInterval))
+                            && !(function instanceof EqualIntervalFunction))
                         classifierModified = true;
-                    else if ((getCombo(COMBO_BREAKTYPE).getText().equalsIgnoreCase(Messages.StyleEditor_theme_quantile)) && !(function instanceof QuantileFunction))
+                    else if ((getCombo(COMBO_BREAKTYPE).getText()
+                            .equalsIgnoreCase(Messages.StyleEditor_theme_quantile))
+                            && !(function instanceof QuantileFunction))
                         classifierModified = true;
-                    else if ((getCombo(COMBO_BREAKTYPE).getText().equalsIgnoreCase(Messages.StyleEditor_theme_standardDeviation)) && !(function instanceof StandardDeviationFunction))
+                    else if ((getCombo(COMBO_BREAKTYPE).getText()
+                            .equalsIgnoreCase(Messages.StyleEditor_theme_standardDeviation))
+                            && !(function instanceof StandardDeviationFunction))
                         classifierModified = true;
-                    else if ((getCombo(COMBO_BREAKTYPE).getText().equalsIgnoreCase(Messages.StyleEditor_theme_uniques)) && !(function instanceof UniqueIntervalFunction))
+                    else if ((getCombo(COMBO_BREAKTYPE).getText()
+                            .equalsIgnoreCase(Messages.StyleEditor_theme_uniques))
+                            && !(function instanceof UniqueIntervalFunction))
                         classifierModified = true;
                     else if (!function.equals(expr))
                         classifierModified = true;
                 }
 
                 String semanticTypeIdentifier;
-                //break type:palette
-                if (getCombo(COMBO_BREAKTYPE).getText().equalsIgnoreCase(Messages.StyleEditor_theme_uniques))
+                // break type:palette
+                if (getCombo(COMBO_BREAKTYPE).getText()
+                        .equalsIgnoreCase(Messages.StyleEditor_theme_uniques))
                     semanticTypeIdentifier = "unique:"; //$NON-NLS-1$
-                else if (getCombo(COMBO_BREAKTYPE).getText().equalsIgnoreCase(Messages.StyleEditor_theme_equalInterval))
+                else if (getCombo(COMBO_BREAKTYPE).getText()
+                        .equalsIgnoreCase(Messages.StyleEditor_theme_equalInterval))
                     semanticTypeIdentifier = "equalinterval:"; //$NON-NLS-1$
-                else if (getCombo(COMBO_BREAKTYPE).getText().equalsIgnoreCase(Messages.StyleEditor_theme_quantile))
+                else if (getCombo(COMBO_BREAKTYPE).getText()
+                        .equalsIgnoreCase(Messages.StyleEditor_theme_quantile))
                     semanticTypeIdentifier = "quantile:"; //$NON-NLS-1$
                 else if (getCombo(COMBO_BREAKTYPE).getText().equalsIgnoreCase("standard deviation")) //$NON-NLS-1$
                     semanticTypeIdentifier = "standarddeviation:"; //$NON-NLS-1$
-                else if (getCombo(COMBO_BREAKTYPE).getText().equalsIgnoreCase(Messages.StyleEditor_theme_custom))
+                else if (getCombo(COMBO_BREAKTYPE).getText()
+                        .equalsIgnoreCase(Messages.StyleEditor_theme_custom))
                     semanticTypeIdentifier = "custom:"; //$NON-NLS-1$
                 else {
                     semanticTypeIdentifier = "default:"; //$NON-NLS-1$
                 }
                 semanticTypeIdentifier = semanticTypeIdentifier.concat(paletteName.toLowerCase());
 
-                //create the classification function, if necessary
+                // create the classification function, if necessary
                 if (classifierModified) {
-                    //TODO: add other classifiers
+                    // TODO: add other classifiers
                     FunctionName fn = null;
                     boolean createClassifier = true;
-                    if (getCombo(COMBO_BREAKTYPE).getText().equalsIgnoreCase(Messages.StyleEditor_theme_uniques))
+                    if (getCombo(COMBO_BREAKTYPE).getText()
+                            .equalsIgnoreCase(Messages.StyleEditor_theme_uniques))
                         fn = UniqueIntervalFunction.NAME;
-                    else if (getCombo(COMBO_BREAKTYPE).getText().equalsIgnoreCase(Messages.StyleEditor_theme_equalInterval))
+                    else if (getCombo(COMBO_BREAKTYPE).getText()
+                            .equalsIgnoreCase(Messages.StyleEditor_theme_equalInterval))
                         fn = EqualIntervalFunction.NAME;
-                    else if (getCombo(COMBO_BREAKTYPE).getText().equalsIgnoreCase(Messages.StyleEditor_theme_quantile))
+                    else if (getCombo(COMBO_BREAKTYPE).getText()
+                            .equalsIgnoreCase(Messages.StyleEditor_theme_quantile))
                         fn = QuantileFunction.NAME;
-                    else if (getCombo(COMBO_BREAKTYPE).getText().equalsIgnoreCase(Messages.StyleEditor_theme_standardDeviation))
+                    else if (getCombo(COMBO_BREAKTYPE).getText()
+                            .equalsIgnoreCase(Messages.StyleEditor_theme_standardDeviation))
                         fn = StandardDeviationFunction.NAME;
-                    else if (getCombo(COMBO_BREAKTYPE).getText().equalsIgnoreCase(Messages.StyleEditor_theme_custom)){
+                    else if (getCombo(COMBO_BREAKTYPE).getText()
+                            .equalsIgnoreCase(Messages.StyleEditor_theme_custom)) {
                         classifier = customBreak;
                         createClassifier = false;
-                    }else{
+                    } else {
                         return;
                     }
 
                     if (createClassifier) {
-                        function = (ClassificationFunction) ff.function(fn.getFunctionName(), new Expression[fn.getArgumentCount()]);
+                        function = (ClassificationFunction) ff.function(fn.getFunctionName(),
+                                new Expression[fn.getArgumentCount()]);
 
-                        ProgressListener cancelProgress = ((StyleEditorDialog) getContainer()).getProgressListener();
+                        ProgressListener cancelProgress = ((StyleEditorDialog) getContainer())
+                                .getProgressListener();
                         function.setProgressListener(cancelProgress);
-                        numClasses = new Integer(getCombo(COMBO_CLASSES).getText()).intValue();
+                        numClasses = Integer.valueOf(getCombo(COMBO_CLASSES).getText()).intValue();
 
                         if (getCombo(COMBO_ELSE).getSelectionIndex() == 0) {
                             // function.setNumberOfClasses(numClasses);
@@ -1357,27 +1506,29 @@ public class StyleThemePage extends StyleEditorPage {
                             function.setClasses(numClasses - 1);
                         }
                         // function.setCollection(collection);
-                        function.getParameters().set(0, expr); // set the expression last, since it causes the calculation
+                        function.getParameters().set(0, expr); // set the expression last, since it
+                                                               // causes the calculation
                         // function.setExpression(expr);
-                        classifier = (Classifier) function.evaluate(collection,Classifier.class);
+                        classifier = function.evaluate(collection, Classifier.class);
                     }
                 }
 
-                //generate the style
+                // generate the style
                 BrewerPalette palette = getBrewer().getPalette(paletteName);
 
                 Color[] colors = null;
-                try{
+                try {
                     colors = palette.getColors(numClasses);
-                }catch (Exception e) {
+                } catch (Exception e) {
                     colors = palette.getColors();
-                    palette = new CustomDynamicPalette(palette.getName(), palette.getDescription(), colors);
+                    palette = new CustomDynamicPalette(palette.getName(), palette.getDescription(),
+                            colors);
                     colors = palette.getColors(numClasses);
                 }
                 if (reverseColours) {
                     for (int i = 0; i < colors.length / 2; i++) {
                         Color tempColor = colors[i];
-                        int j = colors.length-i-1;
+                        int j = colors.length - i - 1;
                         colors[i] = colors[j];
                         colors[j] = tempColor;
                     }
@@ -1385,13 +1536,13 @@ public class StyleThemePage extends StyleEditorPage {
 
                 int elsemode = -1;
                 if (getCombo(COMBO_ELSE).getSelectionIndex() == 0) {
-                    //sg.setElseMode(StyleGenerator.ELSEMODE_IGNORE);
+                    // sg.setElseMode(StyleGenerator.ELSEMODE_IGNORE);
                     elsemode = StyleGenerator.ELSEMODE_IGNORE;
                 } else if (getCombo(COMBO_ELSE).getSelectionIndex() == 1) {
-                    //sg.setElseMode(StyleGenerator.ELSEMODE_INCLUDEASMIN);
+                    // sg.setElseMode(StyleGenerator.ELSEMODE_INCLUDEASMIN);
                     elsemode = StyleGenerator.ELSEMODE_INCLUDEASMIN;
                 } else if (getCombo(COMBO_ELSE).getSelectionIndex() == 2) {
-                    //sg.setElseMode(StyleGenerator.ELSEMODE_INCLUDEASMAX);
+                    // sg.setElseMode(StyleGenerator.ELSEMODE_INCLUDEASMAX);
                     elsemode = StyleGenerator.ELSEMODE_INCLUDEASMAX;
                 }
                 int opacIndex = getCombo(COMBO_OPACITY).getSelectionIndex();
@@ -1401,11 +1552,16 @@ public class StyleThemePage extends StyleEditorPage {
                 } else {
                     opac = 1;
                 }
-                Color borderColor = BorderColorComboListener.getBorder(getCombo(COMBO_BORDER_COLOR));
+                Color borderColor = BorderColorComboListener
+                        .getBorder(getCombo(COMBO_BORDER_COLOR));
 
                 FeatureTypeStyle newFTS = null;
                 try {
-                    newFTS = StyleGenerator.createFeatureTypeStyle(classifier, (org.opengis.filter.expression.Expression) expr, colors, semanticTypeIdentifier, getSelectedLayer().getSchema().getGeometryDescriptor(), elsemode, opac, null);
+                    newFTS = StyleGenerator.createFeatureTypeStyle(classifier,
+                            expr, colors,
+                            semanticTypeIdentifier,
+                            getSelectedLayer().getSchema().getGeometryDescriptor(), elsemode, opac,
+                            null);
                     applyExistingRulesProperties(newFTS, opac, borderColor);
                 } catch (IllegalFilterException e) {
                     newFTS = null;
@@ -1415,22 +1571,24 @@ public class StyleThemePage extends StyleEditorPage {
                     SLDPlugin.log("sg.createFeatureTypeStyle() failed", e); //$NON-NLS-1$
                 }
                 if (newFTS == null) {
-                    ErrorManager.get().displayError(Messages.StyleEditor_error, Messages.StyleEditor_theme_failure);
+                    ErrorManager.get().displayError(Messages.StyleEditor_error,
+                            Messages.StyleEditor_theme_failure);
                     return;
                 } else {
-                    //set the FeatureTypeName to the current layer name
+                    // set the FeatureTypeName to the current layer name
                     newFTS.featureTypeNames().clear();
-                    newFTS.featureTypeNames().add( new NameImpl( SLDs.GENERIC_FEATURE_TYPENAME ));
-                    //get the style
+                    newFTS.featureTypeNames().add(new NameImpl(SLDs.GENERIC_FEATURE_TYPENAME));
+                    // get the style
                     Style style = getStyle();
-                    //ensure the style has an SLD
-                    if (style == null) throw new RuntimeException("Style is null"); //$NON-NLS-1$
+                    // ensure the style has an SLD
+                    if (style == null)
+                        throw new RuntimeException("Style is null"); //$NON-NLS-1$
 
-                    StyledLayerDescriptor sld = null; //SLDs.styledLayerDescriptor(style);
+                    StyledLayerDescriptor sld = null; // SLDs.styledLayerDescriptor(style);
                     if (sld == null) {
                         SLDContent.createDefaultStyledLayerDescriptor(style);
                     }
-                    //insert/replace the FTS
+                    // insert/replace the FTS
                     try {
                         addThemedFTStoStyle(style, newFTS);
                     } catch (Exception e) {
@@ -1440,7 +1598,7 @@ public class StyleThemePage extends StyleEditorPage {
                         return;
                     }
 
-                    //update the suitability icons
+                    // update the suitability icons
                     if (suitability != null) {
                         updateSuitabilities(suitability);
                     }
@@ -1458,23 +1616,24 @@ public class StyleThemePage extends StyleEditorPage {
             ErrorManager.get().displayException(e, msg, SLDPlugin.ID);
         }
 
-        //resize the palette selection table
+        // resize the palette selection table
         displayBottomComposite();
         TableUtils.resizeColumns(treeViewer.getTree(), tableSettings, TableUtils.MODE_JUMP);
-        //TODO: only the first time
+        // TODO: only the first time
 
         treeViewer.getControl().setVisible(true);
     }
 
     /**
-     * This takes as much as possible from the old rules and applies them
-     * to the new ones. In that way mark type, size and borders are properly kept.
+     * This takes as much as possible from the old rules and applies them to the new ones. In that
+     * way mark type, size and borders are properly kept.
      *
      * @param newFTS the new style to tweak.
      * @param opac an opacity value to apply to the fill.
      * @param borderColor
      */
-    private void applyExistingRulesProperties( FeatureTypeStyle newFTS, double opac, Color borderColor ) {
+    private void applyExistingRulesProperties(FeatureTypeStyle newFTS, double opac,
+            Color borderColor) {
         Style style = getStyle();
         Symbolizer[] symbolizers = SLDs.symbolizers(style);
         if (symbolizers.length > 0) {
@@ -1486,33 +1645,34 @@ public class StyleThemePage extends StyleEditorPage {
                 if (oldMark != null) {
                     // we apply the properties to all the new rules
                     List<Rule> rules = newFTS.rules();
-                    for( Rule rule : rules ) {
+                    for (Rule rule : rules) {
                         String[] colors = SLDs.colors(rule);
                         Color fill = SLDs.toColor(colors[0]);
 
                         List<Symbolizer> newSymbolizers = rule.symbolizers();
-                        for( Symbolizer newSymbolizer : newSymbolizers ) {
+                        for (Symbolizer newSymbolizer : newSymbolizers) {
                             if (newSymbolizer instanceof PointSymbolizer) {
                                 PointSymbolizer newPointSymbolizer = (PointSymbolizer) newSymbolizer;
 
-                                Mark mark = sb.createMark(oldMark.getWellKnownName().evaluate(null, String.class));
+                                Mark mark = sb.createMark(
+                                        oldMark.getWellKnownName().evaluate(null, String.class));
                                 Fill newFill = sb.createFill(fill);
                                 newFill.setOpacity(ff.literal(opac));
                                 mark.setFill(newFill);
 
                                 Stroke newStroke = oldMark.getStroke();
                                 if (newStroke != null) {
-                                    if (borderColor!=null) {
+                                    if (borderColor != null) {
                                         newStroke.setColor(ff.literal(borderColor));
                                         mark.setStroke(newStroke);
-                                    }else{
+                                    } else {
                                         mark.setStroke(null);
                                     }
                                 }
 
                                 Graphic newGraphic = SLDs.graphic(newPointSymbolizer);
                                 newGraphic.setSize(oldGraphic.getSize());
-                                newGraphic.setRotation( oldGraphic.getRotation());
+                                newGraphic.setRotation(oldGraphic.getRotation());
                                 newGraphic.graphicalSymbols().clear();
                                 newGraphic.graphicalSymbols().add(mark);
                                 break;
@@ -1522,20 +1682,20 @@ public class StyleThemePage extends StyleEditorPage {
                 }
             } else if (symbolizer instanceof PolygonSymbolizer) {
                 List<Rule> rules = newFTS.rules();
-                for( Rule rule : rules ) {
+                for (Rule rule : rules) {
                     List<Symbolizer> newSymbolizers = rule.symbolizers();
-                    for( Symbolizer newSymbolizer : newSymbolizers ) {
+                    for (Symbolizer newSymbolizer : newSymbolizers) {
                         if (newSymbolizer instanceof PolygonSymbolizer) {
-                            PolygonSymbolizer polygonSymbolizer = (PolygonSymbolizer ) newSymbolizer;
+                            PolygonSymbolizer polygonSymbolizer = (PolygonSymbolizer) newSymbolizer;
 
                             Fill previousFill = SLDs.fill(polygonSymbolizer);
                             previousFill.setOpacity(ff.literal(opac));
 
                             Stroke stroke = SLDs.stroke(polygonSymbolizer);
                             if (stroke != null) {
-                                if(borderColor!=null){
+                                if (borderColor != null) {
                                     stroke.setColor(ff.literal(borderColor));
-                                }else{
+                                } else {
                                     polygonSymbolizer.setStroke(null);
                                 }
                             }
@@ -1555,7 +1715,7 @@ public class StyleThemePage extends StyleEditorPage {
     FeatureTypeStyle getFTS() {
         Style style = getStyle();
         List<FeatureTypeStyle> featureTypeStyles = style.featureTypeStyles();
-        for( FeatureTypeStyle featureTypeStyle : featureTypeStyles ) {
+        for (FeatureTypeStyle featureTypeStyle : featureTypeStyles) {
             if (SLDs.isSemanticTypeMatch(featureTypeStyle, "colorbrewer:.*")) { //$NON-NLS-1$
                 return featureTypeStyle;
             }
@@ -1572,8 +1732,8 @@ public class StyleThemePage extends StyleEditorPage {
      * @param fts FTS to insert/replace with
      */
     private void addThemedFTStoStyle(Style style, FeatureTypeStyle fts) {
-        //determine what symbolizers exist in the fts
-        Set<Object> symbs = new HashSet<Object>();
+        // determine what symbolizers exist in the fts
+        Set<Object> symbs = new HashSet<>();
         List<Rule> newRules = fts.rules();
         for (int i = 0; i < newRules.size(); i++) {
             Symbolizer[] newSymbs = newRules.get(i).getSymbolizers();
@@ -1582,23 +1742,23 @@ public class StyleThemePage extends StyleEditorPage {
             }
         }
 
-        //search for a match, and replace if found
+        // search for a match, and replace if found
         boolean found = false;
-        for (int i = 0; i < style.featureTypeStyles().size(); i ++) {
+        for (int i = 0; i < style.featureTypeStyles().size(); i++) {
             if (SLDs.isSemanticTypeMatch(style.featureTypeStyles().get(i), "colorbrewer:.*")) { //$NON-NLS-1$
                 style.featureTypeStyles().set(i, fts);
                 found = true;
             } else {
-                //purge any conflicting Symbolizers (same class)
-                //TODO: add conditions under which other Symbolizers might live
+                // purge any conflicting Symbolizers (same class)
+                // TODO: add conditions under which other Symbolizers might live
                 List<Rule> rule = style.featureTypeStyles().get(i).rules();
                 for (int j = 0; j < rule.size(); j++) {
                     Symbolizer[] symb = rule.get(j).getSymbolizers();
-                    Symbolizer[] newSymb = (Symbolizer[]) symb.clone();
+                    Symbolizer[] newSymb = symb.clone();
                     int deletedElements = 0;
                     for (int k = 0; k < symb.length; k++) {
-                        if (symbs.contains(symb[k].getClass())) { //the Symbolizer class is a match
-                            Object[] temp = removeElement(newSymb, k-deletedElements);
+                        if (symbs.contains(symb[k].getClass())) { // the Symbolizer class is a match
+                            Object[] temp = removeElement(newSymb, k - deletedElements);
                             if (temp.length > 0) {
                                 newSymb = new Symbolizer[temp.length];
                                 for (int l = 0; l < temp.length; l++) {
@@ -1612,12 +1772,13 @@ public class StyleThemePage extends StyleEditorPage {
                     }
                     if (deletedElements > 0) {
                         rule.get(j).symbolizers().clear();
-                        for (Symbolizer s : newSymb) rule.get(j).symbolizers().add(s);
+                        for (Symbolizer s : newSymb)
+                            rule.get(j).symbolizers().add(s);
                     }
                 }
             }
         }
-        //delete any rules with zero symbolizers
+        // delete any rules with zero symbolizers
         for (int i = 0; i < style.featureTypeStyles().size(); i++) {
             boolean changed = false;
             List<Rule> rule = style.featureTypeStyles().get(i).rules();
@@ -1627,7 +1788,7 @@ public class StyleThemePage extends StyleEditorPage {
                         Object[] temp = removeElement(rule, j);
                         rule = new ArrayList<>(temp.length);
                         for (int k = 0; k < temp.length; k++) {
-                            rule.set(k, (Rule)temp[k]);
+                            rule.set(k, (Rule) temp[k]);
                         }
                     } else {
                         rule = new ArrayList<>();
@@ -1641,55 +1802,61 @@ public class StyleThemePage extends StyleEditorPage {
                 style.featureTypeStyles().get(i).rules().addAll(rule);
             }
         }
-        //delete any FTSs with zero rules
+        // delete any FTSs with zero rules
         List<FeatureTypeStyle> items = new ArrayList<>();
         for (int i = 0; i < style.featureTypeStyles().size(); i++) {
             if (style.featureTypeStyles().get(i).rules().size() == 0) {
                 Object[] temp = removeElement(style.featureTypeStyles(), i);
                 for (int j = 0; j < temp.length; j++) {
-                    items.add((FeatureTypeStyle)temp[j]);
+                    items.add((FeatureTypeStyle) temp[j]);
                 }
             }
         }
-        //create a FTS if needed
+        // create a FTS if needed
         style.featureTypeStyles().clear();
 
         if (!found) {
             style.featureTypeStyles().add(fts);
-            //match was not found, so add the FTS
+            // match was not found, so add the FTS
         }
         style.featureTypeStyles().addAll(items);
     }
 
     private Object[] removeElement(List<?> array, int indexToRemove) {
-        if (array.size() == 1) return new Object[0];
-        Object[] newArray = new Object[array.size()-1];
+        if (array.size() == 1)
+            return new Object[0];
+        Object[] newArray = new Object[array.size() - 1];
         if (indexToRemove > 0) {
             System.arraycopy(array, 0, newArray, 0, indexToRemove);
         }
-        if (indexToRemove < array.size()-1) {
-            System.arraycopy(array, indexToRemove+1, newArray, indexToRemove, array.size()-indexToRemove-1);
+        if (indexToRemove < array.size() - 1) {
+            System.arraycopy(array, indexToRemove + 1, newArray, indexToRemove,
+                    array.size() - indexToRemove - 1);
         }
         return newArray;
     }
 
     private Object[] removeElement(Object[] array, int indexToRemove) {
-        if (array.length == 1) return new Object[0];
-        Object[] newArray = new Object[array.length-1];
+        if (array.length == 1)
+            return new Object[0];
+        Object[] newArray = new Object[array.length - 1];
         if (indexToRemove > 0) {
             System.arraycopy(array, 0, newArray, 0, indexToRemove);
         }
-        if (indexToRemove < array.length-1) {
-            System.arraycopy(array, indexToRemove+1, newArray, indexToRemove, array.length-indexToRemove-1);
+        if (indexToRemove < array.length - 1) {
+            System.arraycopy(array, indexToRemove + 1, newArray, indexToRemove,
+                    array.length - indexToRemove - 1);
         }
         return newArray;
     }
+
     private AttributeDescriptor getAttributeType(String attributeTypeName) {
         SimpleFeatureType featureType = getSelectedLayer().getSchema();
         for (int i = 0; i < featureType.getAttributeCount(); i++) {
             AttributeDescriptor attributeType = featureType.getDescriptor(i);
-            //if (attributeType.getName().equals(attributeTypeName)) return attributeType;
-            if (attributeType.getName().getLocalPart().equals(attributeTypeName)) return attributeType;
+            // if (attributeType.getName().equals(attributeTypeName)) return attributeType;
+            if (attributeType.getName().getLocalPart().equals(attributeTypeName))
+                return attributeType;
         }
         return null;
     }
@@ -1703,7 +1870,7 @@ public class StyleThemePage extends StyleEditorPage {
         if (layout instanceof GridData) {
             GridData gd = (GridData) layout;
             gd.grabExcessVerticalSpace = false;
-            gd.heightHint = 70; //50 ~= 4 lines, 70 ~= 5 lines
+            gd.heightHint = 70; // 50 ~= 4 lines, 70 ~= 5 lines
         }
         getLabel(LABEL_SEPARATOR_BOTTOM).setVisible(true);
         getLayoutData(COMPOSITE_MIDDLE).grabExcessVerticalSpace = false;
@@ -1722,46 +1889,57 @@ public class StyleThemePage extends StyleEditorPage {
             int icon = (viewerQuality.get(key)).intValue();
             int quality = suitability[key];
             String viewer = Messages.StyleEditor_theme_suitability_visiblefor + " " //$NON-NLS-1$
-                    + controlNames.get(icon) + " ";     //$NON-NLS-1$
+                    + controlNames.get(icon) + " "; //$NON-NLS-1$
             Label label = getLabel(icon);
             if (quality == PaletteSuitability.QUALITY_GOOD) {
-                //getLabel(icon).setImage(getImageWithOverlay(icon, SLDPlugin.getDefault().getImageDescriptor(ImageConstants.GOOD_OVERLAY)));
                 label.setImage(getImageWithOverlay(icon, null));
-                label.setToolTipText(viewer+Messages.StyleEditor_theme_suitability_good);
+                label.setToolTipText(viewer + Messages.StyleEditor_theme_suitability_good);
             } else if (quality == PaletteSuitability.QUALITY_DOUBTFUL) {
-                getLabel(icon).setImage(getImageWithOverlay(icon, SLDPlugin.getDefault().getImageDescriptor(ImageConstants.DOUBTFUL_OVERLAY)));
-                label.setToolTipText(viewer+Messages.StyleEditor_theme_suitability_doubtful);
+                getLabel(icon).setImage(getImageWithOverlay(icon, SLDPlugin.getDefault()
+                        .getImageDescriptor(ImageConstants.DOUBTFUL_OVERLAY)));
+                label.setToolTipText(viewer + Messages.StyleEditor_theme_suitability_doubtful);
             } else if (quality == PaletteSuitability.QUALITY_BAD) {
-                getLabel(icon).setImage(getImageWithOverlay(icon, SLDPlugin.getDefault().getImageDescriptor(ImageConstants.BAD_OVERLAY)));
-                label.setToolTipText(viewer+Messages.StyleEditor_theme_suitability_bad);
-            } else { //UNKNOWN
-                getLabel(icon).setImage(getImageWithOverlay(icon, SLDPlugin.getDefault().getImageDescriptor(ImageConstants.UNKNOWN_OVERLAY)));
-                label.setToolTipText(viewer+Messages.StyleEditor_theme_suitability_unknown);
+                getLabel(icon).setImage(getImageWithOverlay(icon,
+                        SLDPlugin.getDefault().getImageDescriptor(ImageConstants.BAD_OVERLAY)));
+                label.setToolTipText(viewer + Messages.StyleEditor_theme_suitability_bad);
+            } else { // UNKNOWN
+                getLabel(icon).setImage(getImageWithOverlay(icon,
+                        SLDPlugin.getDefault().getImageDescriptor(ImageConstants.UNKNOWN_OVERLAY)));
+                label.setToolTipText(viewer + Messages.StyleEditor_theme_suitability_unknown);
             }
         }
     }
 
     private Image getImageWithOverlay(int iconLabelID, ImageDescriptor overlay) {
-        //get the base image
+        // get the base image
         ImageDescriptor descriptor = null;
         Image base = null;
-        if (iconLabelID == LABEL_ICON_COLORBLIND) descriptor = SLDPlugin.getDefault().getImageDescriptor(ImageConstants.COLORBLIND_ICON);
-        else if (iconLabelID == LABEL_ICON_CRT) descriptor = SLDPlugin.getDefault().getImageDescriptor(ImageConstants.CRT_ICON);
-        else if (iconLabelID == LABEL_ICON_LCD) descriptor = SLDPlugin.getDefault().getImageDescriptor(ImageConstants.LAPTOP_ICON);
-        else if (iconLabelID == LABEL_ICON_PHOTOCOPY) descriptor = SLDPlugin.getDefault().getImageDescriptor(ImageConstants.PHOTOCOPY_ICON);
-        else if (iconLabelID == LABEL_ICON_PRINT) descriptor = SLDPlugin.getDefault().getImageDescriptor(ImageConstants.PRINTER_ICON);
-        else if (iconLabelID == LABEL_ICON_PROJECTOR) descriptor = SLDPlugin.getDefault().getImageDescriptor(ImageConstants.PROJECTOR_ICON);
-        if (descriptor != null) base = descriptor.createImage();
-        if (overlay == null) return base;
-        //apply the overlay
-        DecoratorOverlayIcon ovrIcon = new DecoratorOverlayIcon(base, new ImageDescriptor[] {null,null,overlay,null,null});
+        if (iconLabelID == LABEL_ICON_COLORBLIND)
+            descriptor = SLDPlugin.getDefault().getImageDescriptor(ImageConstants.COLORBLIND_ICON);
+        else if (iconLabelID == LABEL_ICON_CRT)
+            descriptor = SLDPlugin.getDefault().getImageDescriptor(ImageConstants.CRT_ICON);
+        else if (iconLabelID == LABEL_ICON_LCD)
+            descriptor = SLDPlugin.getDefault().getImageDescriptor(ImageConstants.LAPTOP_ICON);
+        else if (iconLabelID == LABEL_ICON_PHOTOCOPY)
+            descriptor = SLDPlugin.getDefault().getImageDescriptor(ImageConstants.PHOTOCOPY_ICON);
+        else if (iconLabelID == LABEL_ICON_PRINT)
+            descriptor = SLDPlugin.getDefault().getImageDescriptor(ImageConstants.PRINTER_ICON);
+        else if (iconLabelID == LABEL_ICON_PROJECTOR)
+            descriptor = SLDPlugin.getDefault().getImageDescriptor(ImageConstants.PROJECTOR_ICON);
+        if (descriptor != null)
+            base = descriptor.createImage();
+        if (overlay == null)
+            return base;
+        // apply the overlay
+        DecoratorOverlayIcon ovrIcon = new DecoratorOverlayIcon(base,
+                new ImageDescriptor[] { null, null, overlay, null, null });
         return ovrIcon.createImage();
     }
 
+    @Override
     public void gotFocus() {
         StyleBlackboard bb = getSelectedLayer().getStyleBlackboard();
-        IMemento memento = (IMemento) bb
-                .get(DialogSettingsStyleContent.EXTENSION_ID);
+        IMemento memento = (IMemento) bb.get(DialogSettingsStyleContent.EXTENSION_ID);
         if (memento != null) {
             setComboSelectionInt(memento, COMBO_OPACITY, OPACITY_KEY);
             setComboSelectionString(memento, COMBO_ATTRIBUTES, ATTRIBUTE_KEY);
@@ -1769,8 +1947,7 @@ public class StyleThemePage extends StyleEditorPage {
             setComboSelectionString(memento, COMBO_BREAKTYPE, BREAK_KEY);
             setComboSelectionString(memento, COMBO_NORMALIZE, NORMALIZE_KEY);
             setComboSelectionString(memento, COMBO_ELSE, ELSE_KEY);
-            setComboSelectionString(memento, COMBO_PALETTES,
-                    PALETTE_CATEGORY_KEY);
+            setComboSelectionString(memento, COMBO_PALETTES, PALETTE_CATEGORY_KEY);
 
             setButtonSelection(memento, BUTTON_COLORBLIND, COLOR_BLIND_KEY);
             setButtonSelection(memento, BUTTON_CRT, CRT_KEY);
@@ -1788,7 +1965,7 @@ public class StyleThemePage extends StyleEditorPage {
         }
     }
 
-    private void setOutine( IMemento memento ) {
+    private void setOutine(IMemento memento) {
         String string = memento.getString(BORDER_COLOR_KEY);
         if (string == null) {
             // nothing set
@@ -1814,7 +1991,7 @@ public class StyleThemePage extends StyleEditorPage {
             combo.select(Outline.WHITE.ordinal());
         } else {
             combo.select(Outline.CUSTOM.ordinal());
-            combo.setData(new RGB(red,green,blue));
+            combo.setData(new RGB(red, green, blue));
         }
     }
 
@@ -1823,20 +2000,20 @@ public class StyleThemePage extends StyleEditorPage {
     }
 
     private void readCustomPalette(IMemento memento) {
-        List<Color> colors = new ArrayList<Color>();
+        List<Color> colors = new ArrayList<>();
         int index = 1;
-        while(memento.getInteger(CUSTOM_PALETTE+index)!=null){
-            int rgb = memento.getInteger(CUSTOM_PALETTE+index);
+        while (memento.getInteger(CUSTOM_PALETTE + index) != null) {
+            int rgb = memento.getInteger(CUSTOM_PALETTE + index);
             colors.add(new Color(rgb));
             index++;
         }
-        if(colors.isEmpty()){
+        if (colors.isEmpty()) {
             return;
         }
-        if( getBrewer().hasPalette(Messages.StyleEditor_theme_custom)){
+        if (getBrewer().hasPalette(Messages.StyleEditor_theme_custom)) {
             customPalette = getBrewer().getPalette(Messages.StyleEditor_theme_custom);
             customPalette.setColors(colors.toArray(new Color[0]));
-        }else{
+        } else {
             customPalette = new BrewerPalette();
             PaletteSuitability suitability = new PaletteSuitability();
 
@@ -1844,15 +2021,16 @@ public class StyleThemePage extends StyleEditorPage {
             String unknown = "?"; //$NON-NLS-1$
             for (int i = 0; i < colors.size(); i++) {
                 if (i > 0) {
-                    //create a simple scheme
-                    int[] scheme = new int[i+1];
-                    for (int j = 0; j < i+1; j++) {
+                    // create a simple scheme
+                    int[] scheme = new int[i + 1];
+                    for (int j = 0; j < i + 1; j++) {
                         scheme[j] = j;
                     }
                     try {
-                        newScheme.setSampleScheme(i+1, scheme);
-                        //set the suitability to unknown
-                        suitability.setSuitability(i+1, new String[] {unknown, unknown, unknown, unknown, unknown, unknown});
+                        newScheme.setSampleScheme(i + 1, scheme);
+                        // set the suitability to unknown
+                        suitability.setSuitability(i + 1, new String[] { unknown, unknown, unknown,
+                                unknown, unknown, unknown });
                     } catch (Exception e) {
                         // SLDPlugin.log("setSuitability() failed", e); //$NON-NLS-1$
                         // don't block here, give an unknown status
@@ -1873,17 +2051,17 @@ public class StyleThemePage extends StyleEditorPage {
         }
         paletteTable.setInput(getBrewer());
         String paletteName = memento.getString(PALETTE_KEY);
-        if(paletteName.equals(customPalette.getName()))
+        if (paletteName.equals(customPalette.getName()))
             paletteTable.setSelection(new StructuredSelection(customPalette));
     }
 
     private void setPaletteSelection(IMemento memento) {
         String paletteName = memento.getString(PALETTE_KEY);
-        if( paletteName!=null ){
+        if (paletteName != null) {
             BrewerPalette[] palettes = brewer.getPalettes();
             for (BrewerPalette brewerPalette : palettes) {
                 String currentName = brewerPalette.getName();
-                if( currentName.equals(paletteName) ){
+                if (currentName.equals(paletteName)) {
                     ISelection selection = new StructuredSelection(brewerPalette);
                     paletteTable.setSelection(selection, true);
                     return;
@@ -1892,22 +2070,21 @@ public class StyleThemePage extends StyleEditorPage {
         }
     }
 
-    private void setButtonSelection(IMemento memento, int widgetID,
-            String mementoKey) {
-        if( memento.getInteger(mementoKey)!=null ){
+    private void setButtonSelection(IMemento memento, int widgetID, String mementoKey) {
+        if (memento.getInteger(mementoKey) != null) {
             Button button = getButton(widgetID);
-            boolean selected = memento.getInteger(mementoKey)>0;
+            boolean selected = memento.getInteger(mementoKey) > 0;
             button.setSelection(selected);
         }
     }
 
     private void setComboSelectionString(IMemento memento, int widgetId, String key) {
         Combo control = getCombo(widgetId);
-        if( memento.getString(key)!=null ){
+        if (memento.getString(key) != null) {
             String string = memento.getString(key);
             String[] items = control.getItems();
             for (int i = 0; i < items.length; i++) {
-                if( items[i].equals(string)){
+                if (items[i].equals(string)) {
                     control.select(i);
                     break;
                 }
@@ -1915,20 +2092,20 @@ public class StyleThemePage extends StyleEditorPage {
         }
     };
 
-
     private void setComboSelectionInt(IMemento memento, int widgetId, String key) {
         Combo control = getCombo(widgetId);
-        if( memento.getInteger(key)!=null ){
+        if (memento.getInteger(key) != null) {
             Integer integer = memento.getInteger(key);
             control.select(integer);
         }
     };
 
+    @Override
     public boolean performApply() {
         StyleBlackboard bb = getSelectedLayer().getStyleBlackboard();
         IMemento memento = (IMemento) bb.get(DialogSettingsStyleContent.EXTENSION_ID);
-        if(memento == null ){
-            memento = XMLMemento.createWriteRoot("ThemeingData");
+        if (memento == null) {
+            memento = XMLMemento.createWriteRoot("ThemeingData"); //$NON-NLS-1$
         }
 
         putIntFromCombo(memento, OPACITY_KEY, COMBO_OPACITY);
@@ -1954,17 +2131,17 @@ public class StyleThemePage extends StyleEditorPage {
         return true;
     }
 
-    private void storeOutline( IMemento memento ) {
+    private void storeOutline(IMemento memento) {
         Combo combo = getCombo(COMBO_BORDER_COLOR);
 
         Outline outline = Outline.values()[combo.getSelectionIndex()];
         RGB rgb = null;
-        switch( outline ) {
+        switch (outline) {
         case BLACK:
-            rgb = new RGB(0,0,0);
+            rgb = new RGB(0, 0, 0);
             break;
         case WHITE:
-            rgb = new RGB(255,255,255);
+            rgb = new RGB(255, 255, 255);
             break;
         case CUSTOM:
             rgb = (RGB) combo.getData();
@@ -1976,28 +2153,27 @@ public class StyleThemePage extends StyleEditorPage {
         }
 
         String sep = "-"; //$NON-NLS-1$
-        String stringVal = rgb.red+sep+rgb.green+sep+rgb.blue;
+        String stringVal = rgb.red + sep + rgb.green + sep + rgb.blue;
         memento.putString(BORDER_COLOR_KEY, stringVal);
     }
 
     private void storeCustomBreak(IMemento memento) {
-        if( customBreak!=null ){
+        if (customBreak != null) {
 
         }
     }
 
     private void storeCustomPalette(IMemento memento) {
-        if( customPalette!=null ){
+        if (customPalette != null) {
             Color[] colors = customPalette.getColors();
             int index = 1;
             for (Color color : colors) {
                 int rgb = color.getRGB();
-                memento.putInteger(CUSTOM_PALETTE+index, rgb);
+                memento.putInteger(CUSTOM_PALETTE + index, rgb);
                 index++;
             }
         }
     }
-
 
     private void storePalette(IMemento memento) {
         ISelection selection = paletteTable.getSelection();
@@ -2011,22 +2187,21 @@ public class StyleThemePage extends StyleEditorPage {
     private void putButton(IMemento memento, int buttonId, String key) {
         boolean selection;
         selection = getButton(buttonId).getSelection();
-        memento.putInteger(key, selection?1:0);
+        memento.putInteger(key, selection ? 1 : 0);
     }
 
-    private void putStringFromCombo(IMemento memento, String key,
-            int comboID) {
+    private void putStringFromCombo(IMemento memento, String key, int comboID) {
         Combo combo = getCombo(comboID);
         int index = combo.getSelectionIndex();
         memento.putString(key, combo.getItem(index));
     }
 
-    private void putIntFromCombo(IMemento memento, String key,
-            int comboID) {
+    private void putIntFromCombo(IMemento memento, String key, int comboID) {
         memento.putInteger(key, getCombo(comboID).getSelectionIndex());
     }
 
+    @Override
     public void refresh() {
-        //TODO: add refresh method
+        // TODO: add refresh method
     }
 }
