@@ -1,4 +1,5 @@
-/* uDig - User Friendly Desktop Internet GIS client
+/**
+ * uDig - User Friendly Desktop Internet GIS client
  * http://udig.refractions.net
  * (C) 2004, Refractions Research Inc.
  *
@@ -24,25 +25,10 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 
-import org.locationtech.udig.issues.IIssuesManager;
-import org.locationtech.udig.issues.IssueConstants;
-import org.locationtech.udig.project.ILayer;
-import org.locationtech.udig.project.IMap;
-import org.locationtech.udig.project.ui.ApplicationGIS;
-import org.locationtech.udig.ui.PlatformGIS;
-import org.locationtech.udig.ui.graphics.TableSettings;
-import org.locationtech.udig.ui.graphics.TableUtils;
-import org.locationtech.udig.validation.DTOUtils;
-import org.locationtech.udig.validation.GenericValidationResults;
-import org.locationtech.udig.validation.ImageConstants;
-import org.locationtech.udig.validation.ValidationPlugin;
-import org.locationtech.udig.validation.ValidationProcessor;
-import org.locationtech.udig.validation.internal.Messages;
-
+import org.eclipse.core.runtime.FileLocator;
 import org.eclipse.core.runtime.IProgressMonitor;
 import org.eclipse.core.runtime.IStatus;
 import org.eclipse.core.runtime.NullProgressMonitor;
-import org.eclipse.core.runtime.Platform;
 import org.eclipse.core.runtime.SubProgressMonitor;
 import org.eclipse.jface.dialogs.IDialogConstants;
 import org.eclipse.jface.dialogs.MessageDialog;
@@ -91,7 +77,7 @@ import org.eclipse.swt.widgets.TableItem;
 import org.eclipse.swt.widgets.Text;
 import org.eclipse.ui.PartInitException;
 import org.eclipse.ui.PlatformUI;
-import org.eclipse.ui.model.WorkbenchViewerSorter;
+import org.eclipse.ui.model.WorkbenchViewerComparator;
 import org.geotools.validation.Validation;
 import org.geotools.validation.dto.ArgumentDTO;
 import org.geotools.validation.dto.PlugInDTO;
@@ -100,88 +86,127 @@ import org.geotools.validation.dto.TestSuiteDTO;
 import org.geotools.validation.xml.ValidationException;
 import org.geotools.validation.xml.XMLReader;
 import org.geotools.validation.xml.XMLWriter;
+import org.locationtech.udig.issues.IIssuesManager;
+import org.locationtech.udig.issues.IssueConstants;
+import org.locationtech.udig.project.ILayer;
+import org.locationtech.udig.project.IMap;
+import org.locationtech.udig.project.ui.ApplicationGIS;
+import org.locationtech.udig.ui.PlatformGIS;
+import org.locationtech.udig.ui.graphics.TableSettings;
+import org.locationtech.udig.ui.graphics.TableUtils;
+import org.locationtech.udig.validation.DTOUtils;
+import org.locationtech.udig.validation.GenericValidationResults;
+import org.locationtech.udig.validation.ImageConstants;
+import org.locationtech.udig.validation.ValidationPlugin;
+import org.locationtech.udig.validation.ValidationProcessor;
+import org.locationtech.udig.validation.internal.Messages;
 import org.opengis.feature.simple.SimpleFeatureType;
 
 public class ValidationDialog extends TitleAreaDialog {
-    
+
     /**
-     * Constant to use as the key for storing the validation processor on the
-     * blackboard (for saving the state of the validation dialog box)
+     * Constant to use as the key for storing the validation processor on the blackboard (for saving
+     * the state of the validation dialog box)
      */
     public static final String BLACKBOARD_KEY = "org.locationtech.udig.validation"; //$NON-NLS-1$
-    
+
     private Button newButton;
+
     private Button deleteButton;
+
     private Button exportButton;
+
     private Button importButton;
+
     private Button runButton;
+
     private Button cancelButton;
+
     private Composite buttonComposite;
+
     private SelectionListener closeListener;
+
     private SelectionListener cancelListener;
+
     private Text nameText;
+
     private Text descText;
+
     private TableViewer tableViewer;
+
     private TableSettings tableSettings;
+
     private CheckboxTreeViewer treeViewer;
+
     private ValidationTreeContentProvider contentProvider = null;
-    
+
     private ProgressMonitorPart progressMonitorPart;
+
     private Object selectedTreeItem;
+
     private ValidationProcessor processor;
 
-    /** The key (name) of the testSuite in use (usually there will only be a
-     *  single testSuite, and this is its name). */
+    /**
+     * The key (name) of the testSuite in use (usually there will only be a single testSuite, and
+     * this is its name).
+     */
     private String defaultTestSuite;
-    
-    /** If a layer was selected to get to this dialog, it is the default testSuite. 
-     *  Otherwise the value is "" or even "*". */
+
+    /**
+     * If a layer was selected to get to this dialog, it is the default testSuite. Otherwise the
+     * value is "" or even "*".
+     */
     private String defaultTypeRef = ""; //$NON-NLS-1$
+
     private Display display;
-    
+
     private static String[] typeRefs;
+
     private static String[] layerNames;
-    //private ILayer[] layers;
 
     public ValidationDialog(Shell parentShell, ILayer[] layers) {
         this(parentShell);
         // determine the defaultTypeRef (from the first selected layer)
         String dsID = layers[0].getSchema().getName().getNamespaceURI();
         String typeName = layers[0].getName();
-        defaultTypeRef = dsID+":"+typeName; //$NON-NLS-1$
-        //this.layers = layers;
+        defaultTypeRef = dsID + ":" + typeName; //$NON-NLS-1$
+        // this.layers = layers;
         display = parentShell.getDisplay();
-        
+
         cancelListener = new SelectionListener() {
 
-            public void widgetSelected( SelectionEvent e ) {
+            @Override
+            public void widgetSelected(SelectionEvent e) {
                 // a test is running and the user just hit cancel
                 // cancel the progress monitor
                 progressMonitorPart.setCanceled(true);
                 cancelButton.setEnabled(false);
             }
 
-            public void widgetDefaultSelected( SelectionEvent e ) {
+            @Override
+            public void widgetDefaultSelected(SelectionEvent e) {
                 widgetSelected(e);
             }
-            
+
         };
     }
-    
+
     protected ValidationDialog(Shell parentShell) {
         super(parentShell);
-        setShellStyle(SWT.DIALOG_TRIM | SWT.RESIZE | SWT.APPLICATION_MODAL | getDefaultOrientation());
+        setShellStyle(
+                SWT.DIALOG_TRIM | SWT.RESIZE | SWT.APPLICATION_MODAL | getDefaultOrientation());
         setBlockOnOpen(true);
     }
-    
+
     public ValidationDialog getDialog() {
-        return this;   
+        return this;
     }
-    
+
+    @Override
     public Button getCancelButton() {
         return cancelButton;
     }
-    
+
     @Override
     protected Control createButtonBar(Composite parent) {
         Composite composite = new Composite(parent, SWT.FILL);
@@ -196,7 +221,7 @@ public class ValidationDialog extends TitleAreaDialog {
         GridData data = new GridData(SWT.FILL, SWT.CENTER, true, false);
         composite.setLayoutData(data);
         composite.setFont(parent.getFont());
-        
+
         // create 2 composites in the composite with left and right aligns
         Composite leftComp = new Composite(composite, SWT.LEFT);
         layout = new GridLayout();
@@ -204,7 +229,8 @@ public class ValidationDialog extends TitleAreaDialog {
         layout.makeColumnsEqualWidth = true;
         layout.marginWidth = convertHorizontalDLUsToPixels(IDialogConstants.HORIZONTAL_MARGIN);
         layout.marginHeight = convertVerticalDLUsToPixels(IDialogConstants.VERTICAL_MARGIN);
-        layout.horizontalSpacing = convertHorizontalDLUsToPixels(IDialogConstants.HORIZONTAL_SPACING);
+        layout.horizontalSpacing = convertHorizontalDLUsToPixels(
+                IDialogConstants.HORIZONTAL_SPACING);
         layout.verticalSpacing = convertVerticalDLUsToPixels(IDialogConstants.VERTICAL_SPACING);
         leftComp.setLayout(layout);
         data = new GridData(SWT.LEFT, SWT.NONE, true, false);
@@ -217,76 +243,67 @@ public class ValidationDialog extends TitleAreaDialog {
         layout.makeColumnsEqualWidth = true;
         layout.marginWidth = convertHorizontalDLUsToPixels(IDialogConstants.HORIZONTAL_MARGIN);
         layout.marginHeight = convertVerticalDLUsToPixels(IDialogConstants.VERTICAL_MARGIN);
-        layout.horizontalSpacing = convertHorizontalDLUsToPixels(IDialogConstants.HORIZONTAL_SPACING);
+        layout.horizontalSpacing = convertHorizontalDLUsToPixels(
+                IDialogConstants.HORIZONTAL_SPACING);
         layout.verticalSpacing = convertVerticalDLUsToPixels(IDialogConstants.VERTICAL_SPACING);
         rightComp.setLayout(layout);
         data = new GridData(SWT.RIGHT, SWT.NONE, true, false);
         rightComp.setLayoutData(data);
         rightComp.setFont(parent.getFont());
-        
+
         // Add the buttons
         importButton = new Button(leftComp, SWT.PUSH);
         importButton.setFont(parent.getFont());
-        importButton.setText(Messages.ValidationDialog_import); 
+        importButton.setText(Messages.ValidationDialog_import);
         importButton.setEnabled(true);
         importButton.addSelectionListener(new ImportSuiteListener());
         setButtonLayoutData(importButton);
 
         exportButton = new Button(leftComp, SWT.PUSH);
         exportButton.setFont(parent.getFont());
-        exportButton.setText(Messages.ValidationDialog_export); 
+        exportButton.setText(Messages.ValidationDialog_export);
         exportButton.setEnabled(false);
         exportButton.addSelectionListener(new ExportSuiteListener());
         setButtonLayoutData(exportButton);
-        
+
         runButton = new Button(rightComp, SWT.PUSH);
         runButton.setFont(parent.getFont());
-        runButton.setText(Messages.ValidationDialog_run); 
+        runButton.setText(Messages.ValidationDialog_run);
         runButton.setEnabled(false);
         runButton.addSelectionListener(new RunTestsListener());
         setButtonLayoutData(runButton);
-        
+
         cancelButton = new Button(rightComp, SWT.PUSH);
         cancelButton.setText(IDialogConstants.CLOSE_LABEL);
         cancelButton.setFont(parent.getFont());
-        cancelButton.setData(new Integer(IDialogConstants.CANCEL_ID));
+        cancelButton.setData(Integer.valueOf(IDialogConstants.CANCEL_ID));
         closeListener = new SelectionAdapter() {
+            @Override
             public void widgetSelected(SelectionEvent event) {
                 // nothing is happening and the user hit cancel (close)
                 buttonPressed(((Integer) event.widget.getData()).intValue());
             }
         };
-//        cancelListener = new SelectionListener() {
-//
-//            public void widgetSelected( SelectionEvent e ) {
-//                // a test is running and the user just hit cancel
-//                // cancel the progress monitor
-//                progressMonitorPart.setCanceled(true);
-//                cancelButton.setEnabled(false);
-//            }
-//
-//            public void widgetDefaultSelected( SelectionEvent e ) {
-//                widgetSelected(e);
-//            }
-//            
-//        };
         cancelButton.addSelectionListener(closeListener);
         setButtonLayoutData(cancelButton);
-        
+
         return composite;
     }
 
     @Override
     protected void createButtonsForButtonBar(Composite parent) {
+
     }
 
     @Override
-    protected Control createDialogArea( Composite parent ) {
+    protected Control createDialogArea(Composite parent) {
         Composite composite = new Composite(parent, SWT.NONE);
-        setTitle(Messages.ValidationDialog_title); 
+        setTitle(Messages.ValidationDialog_title);
         setMessage(""); //$NON-NLS-1$
-        ImageDescriptor image = ValidationPlugin.getDefault().getImageDescriptor(ImageConstants.IMAGE_WIZBAN);
-        if (image != null) setTitleImage(image.createImage());
+        ImageDescriptor image = ValidationPlugin.getDefault()
+                .getImageDescriptor(ImageConstants.IMAGE_WIZBAN);
+        if (image != null)
+            setTitleImage(image.createImage());
 
         GridData gd;
         gd = new GridData(SWT.FILL, SWT.FILL, true, true);
@@ -295,7 +312,7 @@ public class ValidationDialog extends TitleAreaDialog {
         topLayout.marginHeight = 0;
         topLayout.marginWidth = 0;
         composite.setLayout(topLayout);
-        
+
         // Create the SashForm that contains the selection area on the left,
         // and the edit area on the right
         SashForm sashForm = new SashForm(composite, SWT.FILL);
@@ -303,18 +320,18 @@ public class ValidationDialog extends TitleAreaDialog {
         gd = new GridData(SWT.FILL, SWT.FILL, true, true);
         sashForm.setLayoutData(gd);
         sashForm.setFont(parent.getFont());
-        
+
         // Build the validation selection area and put it into the composite.
         Composite validationSelectionArea;
         try {
             validationSelectionArea = createValidationSelectionArea(sashForm);
         } catch (Exception e) {
             // TODO Handle Exception
-            throw (RuntimeException) new RuntimeException( ).initCause( e );
+            throw (RuntimeException) new RuntimeException().initCause(e);
         }
         gd = new GridData(SWT.FILL, SWT.FILL, true, true);
         validationSelectionArea.setLayoutData(gd);
-        
+
         // Build the validation edit area and put it into the composite.
         Composite editAreaComp = createValidationEditArea(sashForm);
         gd = new GridData(SWT.FILL, SWT.FILL, true, true);
@@ -324,8 +341,7 @@ public class ValidationDialog extends TitleAreaDialog {
         GridLayout pmlayout = new GridLayout();
         pmlayout.numColumns = 1;
         progressMonitorPart = createProgressMonitorPart(composite, pmlayout);
-        progressMonitorPart
-                .setLayoutData(new GridData(GridData.FILL_HORIZONTAL));
+        progressMonitorPart.setLayoutData(new GridData(GridData.FILL_HORIZONTAL));
         progressMonitorPart.setVisible(false);
 
         // Build the separator line that demarcates the button bar
@@ -333,30 +349,32 @@ public class ValidationDialog extends TitleAreaDialog {
         gd = new GridData(SWT.FILL, SWT.NONE, true, false);
         // gd.horizontalSpan = 2;
         separator.setLayoutData(gd);
-        
+
         parent.layout(true);
         applyDialogFont(parent);
-        
+
         // create a resize listener
         composite.addListener(SWT.Resize, new Listener() {
 
+            @Override
             public void handleEvent(Event event) {
                 resizeTable();
                 // FIXME: possibly move this listener to the table.resize event
             }
-            
+
         });
-        
+
         composite.addDisposeListener(new DisposeListener() {
 
+            @Override
             public void widgetDisposed(DisposeEvent e) {
                 // find the Map
                 IMap map = ApplicationGIS.getActiveMap();
                 saveDialogState(processor, map);
             }
-            
+
         });
-        
+
         return composite;
     }
 
@@ -364,10 +382,10 @@ public class ValidationDialog extends TitleAreaDialog {
      * Creates the validation test suite selection area of the dialog. This area displays a tree of
      * validations that the user may select and modify. The first tier of the tree contains the
      * available validation plugins, and the second tier contains instances of the test.
-     * 
+     *
      * @return the composite used for the validations selection area
      * @throws Exception
-     */ 
+     */
     protected Composite createValidationSelectionArea(Composite parent) throws Exception {
         Font font = parent.getFont();
         Composite comp = new Composite(parent, SWT.NONE);
@@ -376,14 +394,14 @@ public class ValidationDialog extends TitleAreaDialog {
         layout.marginWidth = 5;
         comp.setLayout(layout);
         comp.setFont(font);
-        
+
         Label treeLabel = new Label(comp, SWT.NONE);
         treeLabel.setFont(font);
-        treeLabel.setText(Messages.ValidationDialog_validations); 
+        treeLabel.setText(Messages.ValidationDialog_validations);
         GridData labelData = new GridData();
         treeLabel.setLayoutData(labelData);
-        
-        ValidationProcessor tempProcessor = loadDialogState(ApplicationGIS.getActiveMap()); 
+
+        ValidationProcessor tempProcessor = loadDialogState(ApplicationGIS.getActiveMap());
         if (tempProcessor == null) {
             processor = createProcessor(null, null);
             defaultTestSuite = "testSuite1"; //$NON-NLS-1$
@@ -402,7 +420,7 @@ public class ValidationDialog extends TitleAreaDialog {
                 int mostTests = -1;
                 for (Iterator i = processor.getTestSuiteDTOs().keySet().iterator(); i.hasNext();) {
                     Object thisKey = i.next();
-                    int numTests = ((TestSuiteDTO) processor.getTestSuiteDTOs().get(thisKey)).getTests().size();
+                    int numTests = processor.getTestSuiteDTOs().get(thisKey).getTests().size();
                     if (numTests > mostTests) {
                         mostTests = numTests;
                         thisTestSuite = (String) thisKey;
@@ -411,26 +429,27 @@ public class ValidationDialog extends TitleAreaDialog {
                 defaultTestSuite = thisTestSuite;
             }
         }
-    
+
         // create the treeViewer (list of possible validations (plugins) + prepared tests)
         treeViewer = new CheckboxTreeViewer(comp);
         treeViewer.setLabelProvider(new ValidationTreeLabelProvider());
-        treeViewer.setSorter(new WorkbenchViewerSorter());
-        contentProvider = new ValidationTreeContentProvider(); 
+        treeViewer.setComparator(new WorkbenchViewerComparator());
+        contentProvider = new ValidationTreeContentProvider();
         treeViewer.setContentProvider(contentProvider);
-        treeViewer.addCheckStateListener(new ICheckStateListener(){
-            public void checkStateChanged( CheckStateChangedEvent event ) {
+        treeViewer.addCheckStateListener(new ICheckStateListener() {
+            @Override
+            public void checkStateChanged(CheckStateChangedEvent event) {
                 Object element = event.getElement();
                 Object[] children = contentProvider.getChildren(element);
                 if (children != null && children.length > 0) {
                     // parent element was modified, adjust the children accordingly
-                    for( int i = 0; i < children.length; i++ ) {
+                    for (int i = 0; i < children.length; i++) {
                         treeViewer.setChecked(children[i], event.getChecked());
                     }
                     // all children are in the same state, therefore the parent is not grayed
-                    treeViewer.setGrayed(element, false); 
+                    treeViewer.setGrayed(element, false);
                 }
-    
+
                 Object parent = contentProvider.getParent(element);
                 if (parent != null) {
                     // child element was modified
@@ -447,64 +466,66 @@ public class ValidationDialog extends TitleAreaDialog {
                     if (allSiblingsChecked) { // mark parent checked and NOT grayed out
                         treeViewer.setGrayed(parent, false);
                         treeViewer.setChecked(parent, true);
-                    } else { 
+                    } else {
                         if (oneSiblingChecked) { // mark parent checked and grayed out
                             treeViewer.setGrayChecked(parent, true);
                         } else { // mark parent NOT checked
                             treeViewer.setGrayChecked(parent, false);
                         }
                     }
-                }                        
+                }
             }
         });
-    
+
         // populate the tree
         treeViewer.setInput(processor);
         treeViewer.expandAll();
-    
+
         Control control = treeViewer.getControl();
         GridData gd = new GridData(GridData.FILL_BOTH);
         gd.heightHint = 250; // initial height of treeViewer (in pixels?)
         gd.verticalSpan = 3;
         control.setLayoutData(gd);
         control.setFont(font);
-        
+
         // composite to hold the new/delete/save/... buttons
         buttonComposite = new Composite(comp, SWT.NONE);
         gd = new GridData(GridData.FILL_HORIZONTAL);
         gd.widthHint = 200;
         buttonComposite.setLayoutData(gd);
         buttonComposite.setFont(comp.getFont());
-        
+
         GridLayout buttonLayout = new GridLayout(2, false);
         buttonComposite.setLayout(buttonLayout);
-        
+
         // construct the new validation test button
         newButton = new Button(buttonComposite, SWT.PUSH);
         newButton.setFont(parent.getFont());
-        newButton.setText(Messages.ValidationDialog_new); 
+        newButton.setText(Messages.ValidationDialog_new);
         newButton.setEnabled(false);
         newButton.addSelectionListener(new NewTestListener());
         setButtonLayoutData(newButton);
-    
+
         // construct the delete validation test button
         deleteButton = new Button(buttonComposite, SWT.PUSH);
         deleteButton.setFont(parent.getFont());
-        deleteButton.setText(Messages.ValidationDialog_delete); 
+        deleteButton.setText(Messages.ValidationDialog_delete);
         deleteButton.setEnabled(false);
         deleteButton.addSelectionListener(new DeleteTestListener());
         setButtonLayoutData(deleteButton);
-    
+
         // construct treeViewer listener
         treeViewer.addSelectionChangedListener(new ISelectionChangedListener() {
 
-            public void selectionChanged( SelectionChangedEvent event ) {
+            @Override
+            public void selectionChanged(SelectionChangedEvent event) {
                 if (!event.getSelection().isEmpty()) {
                     StructuredSelection selection = (StructuredSelection) event.getSelection();
                     if (selection.size() == 1) {
                         Object element = selection.getFirstElement();
-                        selectedTreeItem = element; //record the current selection so other events can figure out who is selected
-                        if (element instanceof TestDTO) { //test instance was selected
+                        selectedTreeItem = element; // record the current selection so other events
+                                                    // can figure out who is selected
+                        if (element instanceof TestDTO) { // test instance was selected
                             newButton.setEnabled(false);
                             deleteButton.setEnabled(true);
                             nameText.setText(((TestDTO) element).getName());
@@ -514,14 +535,16 @@ public class ValidationDialog extends TitleAreaDialog {
                             tableViewer.setInput(element); // pass the args (inside the testDTO)
                             tableViewer.getControl().setEnabled(true);
                             resizeTable();
-                        } else if (element instanceof PlugInDTO) { //validation parent (plugin) was selection
+                        } else if (element instanceof PlugInDTO) { // validation parent (plugin) was
+                                                                   // selection
                             newButton.setEnabled(true);
                             deleteButton.setEnabled(false);
                             nameText.setText(((PlugInDTO) selection.getFirstElement()).getName());
                             nameText.setEditable(false);
-                            descText.setText(((PlugInDTO) selection.getFirstElement()).getDescription());
+                            descText.setText(
+                                    ((PlugInDTO) selection.getFirstElement()).getDescription());
                             descText.setEditable(false);
-                            tableViewer.setInput(null); //hide arguments
+                            tableViewer.setInput(null); // hide arguments
                             tableViewer.getControl().setEnabled(false);
                         } else { // this shouldn't be called
                             newButton.setEnabled(false);
@@ -530,17 +553,17 @@ public class ValidationDialog extends TitleAreaDialog {
                             nameText.setEditable(false);
                             descText.setText(""); //$NON-NLS-1$
                             descText.setEditable(false);
-                            tableViewer.setInput(null); //hide arguments
+                            tableViewer.setInput(null); // hide arguments
                             tableViewer.getControl().setEnabled(false);
                         }
-                        
-                    } else { //more than one selection was made
+
+                    } else { // more than one selection was made
                         selectedTreeItem = null;
                         newButton.setEnabled(false);
                         deleteButton.setEnabled(false);
                         nameText.setEditable(false);
                         descText.setEditable(false);
-                        tableViewer.setInput(null); //hide arguments
+                        tableViewer.setInput(null); // hide arguments
                         tableViewer.getControl().setEnabled(false);
                     }
                     updateButtons();
@@ -551,18 +574,19 @@ public class ValidationDialog extends TitleAreaDialog {
 
         treeViewer.addCheckStateListener(new ICheckStateListener() {
 
-            public void checkStateChanged( CheckStateChangedEvent event ) {
+            @Override
+            public void checkStateChanged(CheckStateChangedEvent event) {
                 updateButtons();
-                
+
                 if (event.getElement() instanceof PlugInDTO) {
                     if (event.getChecked()) {
-                        //select the parent if is not already
+                        // select the parent if is not already
                         ISelection selection;
                         if (selectedTreeItem != event.getElement()) {
                             selection = new StructuredSelection(event.getElement());
                             treeViewer.setSelection(selection);
                         }
-                        //automatically create a child if none exist
+                        // automatically create a child if none exist
                         if (!contentProvider.hasChildren(selectedTreeItem)) {
                             TestDTO newTest = addTest();
                             selection = new StructuredSelection(newTest);
@@ -571,9 +595,9 @@ public class ValidationDialog extends TitleAreaDialog {
                     }
                 }
             }
-            
+
         });
-        
+
         return comp;
     }
 
@@ -581,9 +605,9 @@ public class ValidationDialog extends TitleAreaDialog {
      * Creates the validations edit area of the dialog. This area displays the name and description
      * of the validation test currently selected. Instances of plugins may only be viewed, while
      * instances of validation tests (within the testSuite) may be modified.
-     * 
+     *
      * @return the composite used for launch configuration editing
-     */ 
+     */
     protected Composite createValidationEditArea(Composite parent) {
         // create a composite to place our form objects into
         Font font = parent.getFont();
@@ -594,177 +618,157 @@ public class ValidationDialog extends TitleAreaDialog {
         layout.marginWidth = 5;
         comp.setLayout(layout);
         comp.setFont(font);
-        
+
         // create the "name" label
         Label nameLabel = new Label(comp, SWT.TOP | SWT.LEFT);
         nameLabel.setFont(font);
-        nameLabel.setText(Messages.ValidationDialog_name); 
+        nameLabel.setText(Messages.ValidationDialog_name);
         GridData gd = new GridData();
         nameLabel.setLayoutData(gd);
-        
+
         // create the "name" text box
         nameText = new Text(comp, SWT.BORDER | SWT.SINGLE | SWT.FILL);
-        gd = new GridData( SWT.FILL, SWT.TOP , true, false);
+        gd = new GridData(SWT.FILL, SWT.TOP, true, false);
         nameText.setLayoutData(gd);
         nameText.addModifyListener(new NameModifiedListener());
-        
+
         // create the "description" label
         Label descLabel = new Label(comp, SWT.TOP | SWT.LEFT);
         descLabel.setFont(font);
-        descLabel.setText(Messages.ValidationDialog_description); 
+        descLabel.setText(Messages.ValidationDialog_description);
         gd = new GridData();
         nameLabel.setLayoutData(gd);
-        
+
         // create the "description" text box
         descText = new Text(comp, SWT.BORDER | SWT.MULTI | SWT.WRAP | SWT.V_SCROLL);
         gd = new GridData(SWT.FILL, SWT.TOP, true, false);
         gd.heightHint = 60;
         descText.setLayoutData(gd);
         descText.addModifyListener(new DescModifiedListener());
-        
+
         // create a new table object
         Table table = new Table(comp, SWT.BORDER | SWT.V_SCROLL | SWT.FULL_SELECTION | SWT.RESIZE);
-        
+
         // create a tableViewer containing the table
         tableViewer = createTable(table);
         tableViewer.setContentProvider(new ValidationTableContentProvider());
         tableViewer.setLabelProvider(new ValidationTableLabelProvider());
         tableViewer.setInput(null);
-        
+
         Control control = tableViewer.getControl();
         gd = new GridData(GridData.FILL_BOTH);
         gd.heightHint = 200; // initial height of treeViewer (in pixels?)
         control.setLayoutData(gd);
         control.setFont(font);
-    
+
         tableViewer.setCellModifier(new CellModifiedListener());
-    
+
         CellEditor[] editors = new CellEditor[2];
         editors[0] = null;
         Object[] allLayers = ApplicationGIS.getActiveMap().getMapLayers().toArray();
-        
-        ArrayList<String> typeRefsList = new ArrayList<String>();
-        ArrayList<String> layerNamesList = new ArrayList<String>();
-        
+
+        ArrayList<String> typeRefsList = new ArrayList<>();
+        ArrayList<String> layerNamesList = new ArrayList<>();
+
         typeRefsList.add(""); //$NON-NLS-1$
         layerNamesList.add(""); //$NON-NLS-1$
         typeRefsList.add("*"); //$NON-NLS-1$
         layerNamesList.add("*"); //$NON-NLS-1$
-        
+
         for (int i = 0; i < allLayers.length; i++) {
-            ILayer thisLayer = (ILayer) allLayers[i]; 
+            ILayer thisLayer = (ILayer) allLayers[i];
             SimpleFeatureType schema = thisLayer.getSchema();
-            if( schema==null )
+            if (schema == null)
                 continue;
-            
+
             String dsID = schema.getName().getNamespaceURI();
             String typeName = thisLayer.getName();
-            
-            if(dsID == null || typeName == null)
-            	continue;
-            
-            typeRefsList.add(dsID+":"+typeName); //$NON-NLS-1$
+
+            if (dsID == null || typeName == null)
+                continue;
+
+            typeRefsList.add(dsID + ":" + typeName); //$NON-NLS-1$
             layerNamesList.add(typeName);
         }
-        
+
         typeRefs = typeRefsList.toArray(new String[typeRefsList.size()]);
         layerNames = layerNamesList.toArray(new String[layerNamesList.size()]);
-        
+
         // create the text/combo cell editor
-        editors[1] = new AmbiguousCellEditor((Composite)table, table, layerNamesList, typeRefsList); 
+        editors[1] = new AmbiguousCellEditor(table, table, layerNamesList, typeRefsList);
         // only the layer names will show up in the combo, but typeRef is the real value
-                
+
         tableViewer.setCellEditors(editors);
         // note: Argument and Value below are internal tags, not labels
-        tableViewer.setColumnProperties(new String[] { "Argument", "Value"});  //$NON-NLS-1$//$NON-NLS-2$
-        
+        tableViewer.setColumnProperties(new String[] { "Argument", "Value" }); //$NON-NLS-1$//$NON-NLS-2$
+
         // create a table settings object and configure it
         tableSettings = new TableSettings(table);
         tableSettings.setColumnMin(0, 65);
-        
+
         return comp;
     }
 
     protected TableViewer createTable(Table table) {
         TableViewer tableViewer = new TableViewer(table);
-    
+
         TableLayout layout = new TableLayout();
         layout.addColumnData(new ColumnWeightData(50, 65, true));
         TableColumn nameColumn = new TableColumn(table, SWT.LEFT);
-        nameColumn.setText(Messages.ValidationDialog_argument); 
+        nameColumn.setText(Messages.ValidationDialog_argument);
         nameColumn.setWidth(65);
         layout.addColumnData(new ColumnWeightData(50, 75, true));
         table.setLayout(layout);
         TableColumn valColumn = new TableColumn(table, SWT.LEFT);
-        valColumn.setText(Messages.ValidationDialog_value); 
+        valColumn.setText(Messages.ValidationDialog_value);
         valColumn.setWidth(75);
         table.setHeaderVisible(true);
         table.setLinesVisible(true);
-    
+
         return tableViewer;
     }
-    
+
     /**
      * Create the progress monitor part in the receiver.
-     * 
+     *
      * @param composite
      * @param pmlayout
      * @return ProgressMonitorPart
      */
-    protected ProgressMonitorPart createProgressMonitorPart(
-            Composite composite, GridLayout pmlayout) {
+    protected ProgressMonitorPart createProgressMonitorPart(Composite composite,
+            GridLayout pmlayout) {
         return new ProgressMonitorPart(composite, pmlayout, SWT.DEFAULT) {
             String currentTask = null;
+
             boolean lockedUI = false;
-            
-            /*
-             * (non-Javadoc)
-             * 
-             * @see org.eclipse.jface.wizard.ProgressMonitorPart#setBlocked(org.eclipse.core.runtime.IStatus)
-             */
+
+            @Override
             public void setBlocked(IStatus reason) {
                 super.setBlocked(reason);
                 if (!lockedUI)// Do not show blocked if we are locking the UI
-                    getBlockedHandler().showBlocked(getShell(), this, reason,
-                            currentTask);
+                    getBlockedHandler().showBlocked(getShell(), this, reason, currentTask);
             }
 
-            /*
-             * (non-Javadoc)
-             * 
-             * @see org.eclipse.jface.wizard.ProgressMonitorPart#clearBlocked()
-             */
+            @Override
             public void clearBlocked() {
                 super.clearBlocked();
                 if (!lockedUI)// Do not clear if we never set it
                     getBlockedHandler().clearBlocked();
             }
 
-            /*
-             * (non-Javadoc)
-             * 
-             * @see org.eclipse.jface.wizard.ProgressMonitorPart#beginTask(java.lang.String, int)
-             */
+            @Override
             public void beginTask(String name, int totalWork) {
                 super.beginTask(name, totalWork);
                 currentTask = name;
             }
 
-            /*
-             * (non-Javadoc)
-             * 
-             * @see org.eclipse.jface.wizard.ProgressMonitorPart#setTaskName(java.lang.String)
-             */
+            @Override
             public void setTaskName(String name) {
                 super.setTaskName(name);
                 currentTask = name;
             }
 
-            /*
-             * (non-Javadoc)
-             * 
-             * @see org.eclipse.jface.wizard.ProgressMonitorPart#subTask(java.lang.String)
-             */
+            @Override
             public void subTask(String name) {
                 super.subTask(name);
                 // If we haven't got anything yet use this value for more context
@@ -773,66 +777,68 @@ public class ValidationDialog extends TitleAreaDialog {
             }
         };
     }
-    
-    //TODO: implement runValidationTestsOptimized
-    
-    private GenericValidationResults[] runValidationTestsUnOptimized(IProgressMonitor monitor, Object[] element) throws Exception {
-        //wander through the tree and run each enabled test in the processor individually
-        //filter out the pluginDTOs, leaving only the TestDTOs
-        List<TestDTO> tests = new ArrayList<TestDTO>();
+
+    // TODO: implement runValidationTestsOptimized
+
+    private GenericValidationResults[] runValidationTestsUnOptimized(IProgressMonitor monitor,
+            Object[] element) throws Exception {
+        // wander through the tree and run each enabled test in the processor individually
+        // filter out the pluginDTOs, leaving only the TestDTOs
+        List<TestDTO> tests = new ArrayList<>();
         for (int i = 0; i < element.length; i++) {
             if (element[i] instanceof TestDTO) {
                 tests.add((TestDTO) element[i]);
             }
         }
-        
-        if (monitor == null) monitor = new NullProgressMonitor();
-        monitor.beginTask(Messages.ValidationDialog_validating + 
-                          Messages.ValidationDialog_ellipsis, (tests.size() * 11) + 2); 
-        //update the Lookup Maps
+
+        if (monitor == null)
+            monitor = new NullProgressMonitor();
+        monitor.beginTask(Messages.ValidationDialog_validating + Messages.ValidationDialog_ellipsis,
+                (tests.size() * 11) + 2);
+        // update the Lookup Maps
         processor.updateFVLookup();
-        //processor.updateIVLookup();
+        // processor.updateIVLookup();
         monitor.worked(1);
 
-        //TODO: ensure typeRefs are copied 
+        // TODO: ensure typeRefs are copied
 
-        //monitor.beginTask("Running Tests", tests.size());
+        // monitor.beginTask("Running Tests", tests.size());
 
-        //FIXME: use the selected map rather than layer[0]
+        // FIXME: use the selected map rather than layer[0]
         ILayer[] layers = (ILayer[]) ApplicationGIS.getActiveMap().getMapLayers().toArray();
 
-        //perform feature tests
+        // perform feature tests
         GenericValidationResults[] results = new GenericValidationResults[tests.size()];
-        
-        //open the issues list
+
+        // open the issues list
         openIssuesList();
         monitor.worked(1);
 
         for (int i = 0; i < tests.size(); i++) {
             results[i] = new GenericValidationResults();
-            //check for cancellation
+            // check for cancellation
             if (monitor.isCanceled()) {
                 break;
             }
-            //proceed
+            // proceed
             String testName = tests.get(i).getName();
-            //TODO: run as either feature or integrity test
+            // TODO: run as either feature or integrity test
             monitor.subTask(""); //$NON-NLS-1$
-            monitor.setTaskName(Messages.ValidationDialog_validating + " " + testName  
-                    + Messages.ValidationDialog_ellipsis); 
+            monitor.setTaskName(Messages.ValidationDialog_validating + " " + testName //$NON-NLS-1$
+                    + Messages.ValidationDialog_ellipsis);
             SubProgressMonitor subMonitor = new SubProgressMonitor(monitor, 10);
             processor.runFeatureTest(testName, layers, results[i], subMonitor);
-            //processor.runIntegrityTest(test.getName(), layers, results[i], monitor);
+            // processor.runIntegrityTest(test.getName(), layers, results[i], monitor);
 
-            //check for cancellation again...
+            // check for cancellation again...
             if (subMonitor.isCanceled()) {
                 monitor.setCanceled(true);
             }
             if (monitor.isCanceled()) {
                 break;
             }
-            //add to issues list
-            monitor.subTask(MessageFormat.format(Messages.ValidationDialog_populating, testName)); 
+            // add to issues list
+            monitor.subTask(MessageFormat.format(Messages.ValidationDialog_populating, testName));
             IIssuesManager.defaultInstance.getIssuesList().addAll(results[i].issues);
             monitor.worked(1);
         }
@@ -841,17 +847,18 @@ public class ValidationDialog extends TitleAreaDialog {
     }
 
     /**
-     * Based on the name of the argument, this function determines if it is a
-     * typeRef or not.
-     * 
+     * Based on the name of the argument, this function determines if it is a typeRef or not.
+     *
      * @param argName
      * @return
      */
     public static boolean isTypeRef(String argName) {
-        if (argName.toLowerCase().contains("typeref")) return true; //$NON-NLS-1$
-        else return false;
+        if (argName.toLowerCase().contains("typeref")) //$NON-NLS-1$
+            return true;
+        else
+            return false;
     }
-    
+
     public static String getTypeRefLayer(String typeRef) {
         for (int i = 0; i < typeRefs.length; i++) {
             if (typeRefs[i].equals(typeRef)) {
@@ -860,20 +867,20 @@ public class ValidationDialog extends TitleAreaDialog {
         }
         return null;
     }
-    
+
     /**
      * Creates a validation processor. Both parameters may be null.
      *
      * @param pluginsDir
      * @param testSuiteFile
      * @return
-     * @throws Exception 
+     * @throws Exception
      */
-    private ValidationProcessor createProcessor(File pluginsDir, File testSuiteFile) throws Exception {
+    private ValidationProcessor createProcessor(File pluginsDir, File testSuiteFile)
+            throws Exception {
         if (pluginsDir == null) {
             URL pluginURL = ValidationPlugin.getDefault().getBundle().getResource("plugins"); //$NON-NLS-1$
-            String pluginsPath = Platform.asLocalURL(pluginURL).getFile();
-//            String pluginsPath = FileLocator.toFileURL(pluginURL).getFile();
+            String pluginsPath = FileLocator.toFileURL(pluginURL).getFile();
             pluginsDir = new File(pluginsPath);
         }
         return new ValidationProcessor(pluginsDir, testSuiteFile);
@@ -881,7 +888,7 @@ public class ValidationDialog extends TitleAreaDialog {
 
     /**
      * Resizes the table columns to behave better.
-     * 
+     *
      * @param table
      */
     private void resizeTable() {
@@ -890,8 +897,7 @@ public class ValidationDialog extends TitleAreaDialog {
     }
 
     /**
-     * Sets the given cursor for all shells currently active
-     * for this window's display.
+     * Sets the given cursor for all shells currently active for this window's display.
      *
      * @param c the cursor
      */
@@ -903,11 +909,11 @@ public class ValidationDialog extends TitleAreaDialog {
 
     /** Enables/Disables the buttons as appropriate */
     private void updateButtons() {
-        //check to see if any tests exist in the testSuite
+        // check to see if any tests exist in the testSuite
         boolean testsExist;
         testsExist = processor.testsExist(defaultTestSuite);
         exportButton.setEnabled(testsExist);
-        //only allow tests to be run when at least one is enabled
+        // only allow tests to be run when at least one is enabled
         boolean testsEnabled = false;
         if (testsExist) {
             Object[] elements = treeViewer.getCheckedElements();
@@ -923,89 +929,101 @@ public class ValidationDialog extends TitleAreaDialog {
             newButton.setEnabled(false);
             deleteButton.setEnabled(false);
         }
-        //clear the message bar (validation complete)
+        // clear the message bar (validation complete)
         setMessage(""); //$NON-NLS-1$
     }
 
     private void openIssuesList() throws PartInitException {
-        if( Display.getCurrent()!=null)
-            try{
-                PlatformUI.getWorkbench().getActiveWorkbenchWindow().getActivePage().showView(IssueConstants.VIEW_ID);
+        if (Display.getCurrent() != null)
+            try {
+                PlatformUI.getWorkbench().getActiveWorkbenchWindow().getActivePage()
+                        .showView(IssueConstants.VIEW_ID);
             } catch (PartInitException e) {
                 ValidationPlugin.log("error opening issues view", e); //$NON-NLS-1$
             }
-        else{
-            display.asyncExec(new Runnable(){
+        else {
+            display.asyncExec(new Runnable() {
+                @Override
                 public void run() {
                     try {
-                        PlatformUI.getWorkbench().getActiveWorkbenchWindow().getActivePage().showView(IssueConstants.VIEW_ID);
+                        PlatformUI.getWorkbench().getActiveWorkbenchWindow().getActivePage()
+                                .showView(IssueConstants.VIEW_ID);
                     } catch (PartInitException e) {
                         ValidationPlugin.log("error opening issues view", e); //$NON-NLS-1$
                     }
                 }
             });
         }
-            
+
     }
 
     private class DescModifiedListener implements ModifyListener {
         /**
-         * Saves changes made to the description field 
+         * Saves changes made to the description field
          */
+        @Override
         public void modifyText(ModifyEvent e) {
-            //ensure this is a validation test description (plugin descriptions cannot be modified)
+            // ensure this is a validation test description (plugin descriptions cannot be modified)
             if (selectedTreeItem instanceof TestDTO) {
-                //save the text
+                // save the text
                 TestDTO treeItem = ((TestDTO) selectedTreeItem);
                 treeItem.setDescription(descText.getText());
             }
         }
     }
-    
+
     private class CellModifiedListener implements ICellModifier {
+        @Override
         public boolean canModify(Object element, String property) {
             return true;
         }
 
+        @Override
         public Object getValue(Object element, String property) {
             if (property.equals("Argument")) //$NON-NLS-1$
                 return ((ArgumentDTO) element).getName();
             else {
                 Object value = ((ArgumentDTO) element).getValue();
-                //on read of arg value: null --> ""
-                //on write of arg value:  "" --> null
-                if (value == null) return ""; //$NON-NLS-1$
-                else return value;
+                // on read of arg value: null --> ""
+                // on write of arg value: "" --> null
+                if (value == null)
+                    return ""; //$NON-NLS-1$
+                else
+                    return value;
             }
         }
 
+        @Override
         public void modify(Object element, String property, Object value) {
             if (property.equals("Value")) { //$NON-NLS-1$
-                //store the new value in the testSuite
+                // store the new value in the testSuite
                 TableItem tableItem = (TableItem) element;
                 ArgumentDTO arg = (ArgumentDTO) tableItem.getData();
-                if (value instanceof Integer) { //comboBox
-                    if (value.equals(-1)) arg.setValue(""); //$NON-NLS-1$
+                if (value instanceof Integer) { // comboBox
+                    if (value.equals(-1))
+                        arg.setValue(""); //$NON-NLS-1$
                     else {
                         int val = (Integer) value;
                         arg.setValue(typeRefs[val]);
                     }
-                } else if (value instanceof String) { //textBox
-                    //on read of arg value: null --> ""
-                    //on write of arg value:  "" --> null
-                    if (value.equals("")) arg.setValue(null); //$NON-NLS-1$
-                    else arg.setValue(value);
+                } else if (value instanceof String) { // textBox
+                    // on read of arg value: null --> ""
+                    // on write of arg value: "" --> null
+                    if (value.equals("")) //$NON-NLS-1$
+                        arg.setValue(null);
+                    else
+                        arg.setValue(value);
                 }
                 tableViewer.refresh();
-                //update the argument value in the validation test lookups (FV and IV)
+                // update the argument value in the validation test lookups (FV and IV)
                 try {
                     processor.setArg((TestDTO) selectedTreeItem, arg);
                 } catch (ValidationException e) {
                     // TODO Handle ValidationException
-                    throw (RuntimeException) new RuntimeException( ).initCause( e );
+                    throw (RuntimeException) new RuntimeException().initCause(e);
                 } catch (IntrospectionException e) {
                     // TODO Handle IntrospectionException
-                    throw (RuntimeException) new RuntimeException( ).initCause( e );
+                    throw (RuntimeException) new RuntimeException().initCause(e);
                 }
             }
         }
@@ -1013,20 +1031,22 @@ public class ValidationDialog extends TitleAreaDialog {
 
     private class NameModifiedListener implements ModifyListener {
         /**
-         * Saves changes made to the name field 
+         * Saves changes made to the name field
          */
+        @Override
         public void modifyText(ModifyEvent e) {
-            //ensure this is a validation test description (plugin descriptions cannot be modified)
+            // ensure this is a validation test description (plugin descriptions cannot be modified)
             if (selectedTreeItem instanceof TestDTO) {
-                //save the text
+                // save the text
                 TestDTO treeItem = ((TestDTO) selectedTreeItem);
-                boolean renameSuccess = processor.renameValidation(treeItem.getName(), nameText.getText(), defaultTestSuite);
+                boolean renameSuccess = processor.renameValidation(treeItem.getName(),
+                        nameText.getText(), defaultTestSuite);
                 if (renameSuccess) {
                     treeViewer.refresh();
                     getDialog().setErrorMessage(null);
                 } else {
-                    //user tried to create 2 identical test names -- complain.
-                    getDialog().setErrorMessage(Messages.ValidationDialog_nonUniqueTest); 
+                    // user tried to create 2 identical test names -- complain.
+                    getDialog().setErrorMessage(Messages.ValidationDialog_nonUniqueTest);
                 }
             }
         }
@@ -1035,7 +1055,7 @@ public class ValidationDialog extends TitleAreaDialog {
     private TestDTO addTest() {
         Object selection = selectedTreeItem;
         TestDTO thisTest = null;
-        //plugin is selected?
+        // plugin is selected?
         if (selection instanceof PlugInDTO) {
             // create a new validation test object
             PlugInDTO plugin = (PlugInDTO) selection;
@@ -1044,12 +1064,9 @@ public class ValidationDialog extends TitleAreaDialog {
                 newTest = processor.createValidation(plugin);
             } catch (Exception e1) {
                 // log the exception and return
-                MessageDialog
-                        .openError(
-                                PlatformUI.getWorkbench()
-                                        .getActiveWorkbenchWindow()
-                                        .getShell(),
-                                "Exception Occurred", e1.getClass().toString() + " " + e1.getMessage());  //$NON-NLS-1$//$NON-NLS-2$
+                MessageDialog.openError(
+                        PlatformUI.getWorkbench().getActiveWorkbenchWindow().getShell(),
+                        "Exception Occurred", e1.getClass().toString() + " " + e1.getMessage()); //$NON-NLS-1$//$NON-NLS-2$
                 ValidationPlugin.log(e1.getMessage(), e1);
                 return null;
             }
@@ -1065,35 +1082,38 @@ public class ValidationDialog extends TitleAreaDialog {
                 for (Iterator i = args.keySet().iterator(); i.hasNext();) {
                     ArgumentDTO arg = (ArgumentDTO) args.get(i.next());
                     String argName = arg.getName();
-                    //is it a typeRef?
-                    if (isTypeRef(argName)) { 
-                        //is it empty?
+                    // is it a typeRef?
+                    if (isTypeRef(argName)) {
+                        // is it empty?
                         if (arg.getValue() == null || arg.getValue().toString().length() == 0) {
                             arg.setValue(defaultTypeRef);
                         }
                     }
                 }
             }
-            //if the current item is not expanded, expand it to show the new item
+            // if the current item is not expanded, expand it to show the new item
             if (!treeViewer.getExpandedState(selectedTreeItem)) {
                 treeViewer.setExpandedState(selectedTreeItem, true);
             }
-            //if the current parent test is checked and not grayed, check off the new test
-            if (treeViewer.getChecked(selectedTreeItem) && !treeViewer.getGrayed(selectedTreeItem)) {
+            // if the current parent test is checked and not grayed, check off the new test
+            if (treeViewer.getChecked(selectedTreeItem)
+                    && !treeViewer.getGrayed(selectedTreeItem)) {
                 treeViewer.setChecked(thisTest, true);
             }
-            //refresh
+            // refresh
             treeViewer.refresh();
             updateButtons();
         }
         return thisTest;
     }
-    
+
     private class NewTestListener implements SelectionListener {
+        @Override
         public void widgetSelected(SelectionEvent e) {
             addTest();
         }
 
+        @Override
         public void widgetDefaultSelected(SelectionEvent e) {
             widgetSelected(e);
         }
@@ -1101,34 +1121,38 @@ public class ValidationDialog extends TitleAreaDialog {
     }
 
     private class DeleteTestListener implements SelectionListener {
+        @Override
         public void widgetSelected(SelectionEvent e) {
             Object selection = selectedTreeItem;
-            //a test is selected?
+            // a test is selected?
             if (selection instanceof TestDTO) {
-                //find the validation, given the TestDTO
+                // find the validation, given the TestDTO
                 TestDTO test = (TestDTO) selection;
-                //delete the validation test
+                // delete the validation test
                 processor.removeValidation(test);
                 treeViewer.refresh();
                 updateButtons();
             }
         }
 
+        @Override
         public void widgetDefaultSelected(SelectionEvent e) {
             widgetSelected(e);
         }
     }
-    
+
     private class RunTestsListener implements SelectionListener {
 
         GenericValidationResults[] results = new GenericValidationResults[0];
-        
-        public void widgetSelected( final SelectionEvent e ) {
+
+        @Override
+        public void widgetSelected(final SelectionEvent e) {
             final Object[] element = treeViewer.getCheckedElements();
 
-            IRunnableWithProgress process = new IRunnableWithProgress(){
-                public void run( final IProgressMonitor monitor ) throws InvocationTargetException,
-                        InterruptedException {
+            IRunnableWithProgress process = new IRunnableWithProgress() {
+                @Override
+                public void run(final IProgressMonitor monitor)
+                        throws InvocationTargetException, InterruptedException {
                     try {
                         results = runValidationTestsUnOptimized(monitor, element);
                     } catch (Exception e) {
@@ -1137,7 +1161,7 @@ public class ValidationDialog extends TitleAreaDialog {
                     }
                 }
             };
-            
+
             Control focusControl = null;
             Cursor arrowCursor = null;
             Cursor waitCursor = null;
@@ -1154,72 +1178,76 @@ public class ValidationDialog extends TitleAreaDialog {
                 cancelButton.setText(IDialogConstants.CANCEL_LABEL);
                 cancelButton.setCursor(arrowCursor);
                 cancelButton.setFocus();
-                setMessage("Validation in progress...");
+                setMessage("Validation in progress..."); //$NON-NLS-1$
                 PlatformGIS.runBlockingOperation(process, progressMonitorPart);
-                //progressMonitorPart.setVisible(false);
+                // progressMonitorPart.setVisible(false);
             } catch (InvocationTargetException e1) {
                 // TODO Handle InvocationTargetException
-                throw (RuntimeException) new RuntimeException( ).initCause( e1 );
+                throw (RuntimeException) new RuntimeException().initCause(e1);
             } catch (InterruptedException e1) {
                 // TODO Handle InterruptedException
-                throw (RuntimeException) new RuntimeException( ).initCause( e1 );
+                throw (RuntimeException) new RuntimeException().initCause(e1);
             } finally {
-                //restore listeners
+                // restore listeners
                 cancelButton.removeSelectionListener(cancelListener);
                 cancelButton.addSelectionListener(closeListener);
                 cancelButton.setText(IDialogConstants.CLOSE_LABEL);
-                //fix cursors
+                // fix cursors
                 setDisplayCursor(null);
                 cancelButton.setCursor(null);
                 waitCursor.dispose();
                 waitCursor = null;
                 arrowCursor.dispose();
                 arrowCursor = null;
-                //enable buttons
+                // enable buttons
                 cancelButton.setEnabled(true);
                 runButton.setEnabled(true);
-                //display response
+                // display response
                 if (progressMonitorPart.isCanceled()) {
-                    setMessage("Validation was canceled");
+                    setMessage("Validation was canceled"); //$NON-NLS-1$
                     progressMonitorPart.setCanceled(false);
                 } else {
                     int failures = 0;
                     int warnings = 0;
                     if (results != null) {
-                        for( int i = 0; i < results.length; i++ ) {
+                        for (int i = 0; i < results.length; i++) {
                             if (results[i] != null) {
                                 failures += results[i].failedFeatures.size();
-                                warnings += results[i].warningFeatures.size(); 
+                                warnings += results[i].warningFeatures.size();
                             }
-                        }                        
+                        }
                     }
-                    setMessage("Validation complete, " + failures + " failures and " + warnings + " warnings found.");
+                    setMessage("Validation complete, " + failures + " failures and " + warnings //$NON-NLS-1$ //$NON-NLS-2$
+                            + " warnings found."); //$NON-NLS-1$
                 }
                 focusControl.setFocus();
             }
         }
 
-        public void widgetDefaultSelected( SelectionEvent e ) {
+        @Override
+        public void widgetDefaultSelected(SelectionEvent e) {
             widgetSelected(e);
         }
-        
+
     }
 
     private class ImportSuiteListener implements SelectionListener {
+        @Override
         public void widgetSelected(SelectionEvent e) {
-            //determine the file we want to open
+            // determine the file we want to open
             String fileName = null;
-            //spawn a dialog and choose which file to import
+            // spawn a dialog and choose which file to import
             Display display = Display.getCurrent();
             if (display == null) { // not on the ui thread?
                 display = Display.getDefault();
             }
             FileDialog importDialog = new FileDialog(display.getActiveShell(), SWT.OPEN);
 
-            //final IPath homepath = Platform.getLocation();
-            //exportDialog.setFilterPath(homepath.toOSString());
-            importDialog.setFilterNames (new String [] {Messages.ValidationDialog_filesXML, Messages.ValidationDialog_filesAll});  
-            importDialog.setFilterExtensions (new String [] {"*.xml", "*.*"}); //$NON-NLS-1$ //$NON-NLS-2$
+            // final IPath homepath = Platform.getLocation();
+            // exportDialog.setFilterPath(homepath.toOSString());
+            importDialog.setFilterNames(new String[] { Messages.ValidationDialog_filesXML,
+                    Messages.ValidationDialog_filesAll });
+            importDialog.setFilterExtensions(new String[] { "*.xml", "*.*" }); //$NON-NLS-1$ //$NON-NLS-2$
 
             boolean done = false;
             while (!done) {
@@ -1232,8 +1260,9 @@ public class ValidationDialog extends TitleAreaDialog {
                     File file = new File(fileName);
                     if (!file.exists()) {
                         // The file does not exist; yell at the user and try again
-                        MessageBox mb = new MessageBox(importDialog.getParent(), SWT.ICON_ERROR | SWT.OK);
-                        mb.setMessage(fileName + Messages.ValidationDialog_fileNotExist); 
+                        MessageBox mb = new MessageBox(importDialog.getParent(),
+                                SWT.ICON_ERROR | SWT.OK);
+                        mb.setMessage(fileName + Messages.ValidationDialog_fileNotExist);
                         mb.open();
                     } else {
                         // File exists, so we're good to go
@@ -1242,13 +1271,15 @@ public class ValidationDialog extends TitleAreaDialog {
                 }
             }
 
-            //read the file
+            // read the file
             FileReader reader;
             try {
                 reader = new FileReader(fileName);
             } catch (FileNotFoundException e3) {
-                MessageDialog.openError(PlatformUI.getWorkbench().getActiveWorkbenchWindow().getShell(),Messages.ValidationDialog_fileNotFound, e3.toString()); 
-                ValidationPlugin.log(e3.toString()); //log the error, but don't throw the exception
+                MessageDialog.openError(
+                        PlatformUI.getWorkbench().getActiveWorkbenchWindow().getShell(),
+                        Messages.ValidationDialog_fileNotFound, e3.toString());
+                ValidationPlugin.log(e3.toString()); // log the error, but don't throw the exception
                 return;
             }
             TestSuiteDTO newDTO;
@@ -1256,47 +1287,53 @@ public class ValidationDialog extends TitleAreaDialog {
                 newDTO = XMLReader.readTestSuite(fileName, reader, processor.getPluginDTOs());
             } catch (ValidationException e3) {
                 String errorMsg = e3.toString();
-                MessageDialog.openError(PlatformUI.getWorkbench().getActiveWorkbenchWindow().getShell(),"Exception Occurred", errorMsg); //$NON-NLS-1$
+                MessageDialog.openError(
+                        PlatformUI.getWorkbench().getActiveWorkbenchWindow().getShell(),
+                        "Exception Occurred", errorMsg); //$NON-NLS-1$
                 ValidationPlugin.log(errorMsg, e3);
                 return;
             }
             try {
                 reader.close();
             } catch (IOException e2) {
-                MessageDialog.openError(PlatformUI.getWorkbench().getActiveWorkbenchWindow().getShell(),"Exception Occurred", e2.toString()); //$NON-NLS-1$
+                MessageDialog.openError(
+                        PlatformUI.getWorkbench().getActiveWorkbenchWindow().getShell(),
+                        "Exception Occurred", e2.toString()); //$NON-NLS-1$
                 ValidationPlugin.log(e2.toString(), e2);
                 return;
             }
-            //get the existing testSuites
+            // get the existing testSuites
             Map<String, TestSuiteDTO> suites = processor.getTestSuiteDTOs();
-            //ensure there is at least one test in the new testSuite
+            // ensure there is at least one test in the new testSuite
             if (newDTO.getTests().size() == 0) {
-                //nothing to see here, move along
+                // nothing to see here, move along
                 return;
             }
-            //if no testSuites exist, just copy the new one directly in
+            // if no testSuites exist, just copy the new one directly in
             if (suites.size() == 0) {
-                suites.put(newDTO.getName(), newDTO);                        
+                suites.put(newDTO.getName(), newDTO);
                 defaultTestSuite = newDTO.getName();
-            //does the testSuite exist? if so, add the new tests to the existing one
+                // does the testSuite exist? if so, add the new tests to the existing one
             } else if (suites.containsKey(newDTO.getName())) {
-                //ensure the current testSuite is selected
+                // ensure the current testSuite is selected
                 defaultTestSuite = newDTO.getName();
-                //get the existing testSuite
-                TestSuiteDTO testSuite = (TestSuiteDTO) suites.get(defaultTestSuite);
-                //move the tests to the existing testSuite
+                // get the existing testSuite
+                TestSuiteDTO testSuite = suites.get(defaultTestSuite);
+                // move the tests to the existing testSuite
                 testSuite = processor.moveTests(testSuite, newDTO.getTests(), false);
-                suites.put(defaultTestSuite, testSuite); //overwrite the suite
-            //a test Suite exists, but it isn't this one; put the new tests into the existing testSuite
-            } else { 
-                TestSuiteDTO testSuite = (TestSuiteDTO) suites.get(defaultTestSuite);
+                suites.put(defaultTestSuite, testSuite); // overwrite the suite
+                // a test Suite exists, but it isn't this one; put the new tests into the existing
+                // testSuite
+            } else {
+                TestSuiteDTO testSuite = suites.get(defaultTestSuite);
                 Map<String, TestDTO> tests = newDTO.getTests();
                 testSuite = processor.moveTests(testSuite, tests, false);
-                suites.put(defaultTestSuite, testSuite); //overwrite the suite with new map of tests
+                suites.put(defaultTestSuite, testSuite); // overwrite the suite with new map of
+                                                         // tests
             }
-            //do multiple testSuites exist? if so, merge them
+            // do multiple testSuites exist? if so, merge them
             while (suites.size() > 1) {
-                //find the first testSuite which isn't the defaultTestSuite
+                // find the first testSuite which isn't the defaultTestSuite
                 Object key = null;
                 for (Iterator i = suites.keySet().iterator(); i.hasNext();) {
                     Object thisKey = i.next();
@@ -1306,78 +1343,84 @@ public class ValidationDialog extends TitleAreaDialog {
                     }
                 }
                 if (key != null) {
-                    TestSuiteDTO alphaSuite = (TestSuiteDTO) suites.get(defaultTestSuite);
-                    TestSuiteDTO betaSuite = (TestSuiteDTO) suites.get(key);
+                    TestSuiteDTO alphaSuite = suites.get(defaultTestSuite);
+                    TestSuiteDTO betaSuite = suites.get(key);
                     alphaSuite = processor.moveTests(alphaSuite, betaSuite.getTests(), false);
-                    suites.remove(key); //bye betaSuite!
-                    suites.put(defaultTestSuite, alphaSuite); //overwrite the suite (alphaSuite has now assimilated betaSuite)
+                    suites.remove(key); // bye betaSuite!
+                    suites.put(defaultTestSuite, alphaSuite); // overwrite the suite (alphaSuite has
+                                                              // now assimilated betaSuite)
                 }
             }
-            //all done; save the Map of testSuites and refresh the Tree
+            // all done; save the Map of testSuites and refresh the Tree
             processor.setTestSuiteDTOs(suites);
             treeViewer.refresh();
             updateButtons();
         }
- 
+
+        @Override
         public void widgetDefaultSelected(SelectionEvent e) {
             widgetSelected(e);
         }
     }
-    
+
     private class ExportSuiteListener implements SelectionListener {
+        @Override
         public void widgetSelected(SelectionEvent e) {
             Display display = Display.getCurrent();
             if (display == null) { // not on the ui thread?
                 display = Display.getDefault();
             }
-            //grab the testSuite we want to save
-            TestSuiteDTO testSuite = (TestSuiteDTO) processor.getTestSuiteDTOs().get(defaultTestSuite);
-            //testSuite is empty?
+            // grab the testSuite we want to save
+            TestSuiteDTO testSuite = processor.getTestSuiteDTOs().get(defaultTestSuite);
+            // testSuite is empty?
             if (testSuite.getTests().size() == 0) {
-                MessageBox mb = new MessageBox( display.getActiveShell(), SWT.ICON_ERROR  | SWT.OK);
-                mb.setMessage(Messages.ValidationDialog_noSuitePre+defaultTestSuite+Messages.ValidationDialog_noSuiteSuf);  
+                MessageBox mb = new MessageBox(display.getActiveShell(), SWT.ICON_ERROR | SWT.OK);
+                mb.setMessage(Messages.ValidationDialog_noSuitePre + defaultTestSuite
+                        + Messages.ValidationDialog_noSuiteSuf);
                 mb.open();
                 return;
             }
-            //check the testSuite to ensure that none of the arguments of a test are null
-            if (!DTOUtils.noNullArguments(testSuite)) return;
-            //select the file to export to
+            // check the testSuite to ensure that none of the arguments of a test are null
+            if (!DTOUtils.noNullArguments(testSuite))
+                return;
+            // select the file to export to
             String fileName = null;
-            //spawn a dialog and choose which file to export to
+            // spawn a dialog and choose which file to export to
             FileDialog exportDialog = new FileDialog(display.getActiveShell(), SWT.SAVE);
 
-            //final IPath homepath = Platform.getLocation();
-            //exportDialog.setFilterPath(homepath.toOSString());
-            exportDialog.setFilterNames (new String [] {Messages.ValidationDialog_filesXML, Messages.ValidationDialog_filesAll});  
-            exportDialog.setFilterExtensions (new String [] {"*.xml", "*.*"}); //$NON-NLS-1$ //$NON-NLS-2$
+            // final IPath homepath = Platform.getLocation();
+            // exportDialog.setFilterPath(homepath.toOSString());
+            exportDialog.setFilterNames(new String[] { Messages.ValidationDialog_filesXML,
+                    Messages.ValidationDialog_filesAll });
+            exportDialog.setFilterExtensions(new String[] { "*.xml", "*.*" }); //$NON-NLS-1$ //$NON-NLS-2$
 
             boolean done = false;
             while (!done) {
                 fileName = exportDialog.open();
                 if (fileName == null) {
-                  done = true;
-                  return;
-                } else {
-                  // User has selected a file; see if it already exists
-                  File file = new File(fileName);
-                  if (file.exists()) {
-                    // The file already exists; asks for confirmation
-                    MessageBox mb = new MessageBox(exportDialog.getParent(), SWT.ICON_WARNING
-                        | SWT.YES | SWT.NO);
-    
-                    mb.setMessage(fileName + Messages.ValidationDialog_fileExists); 
-    
-                    // If they click Yes, we're done and we drop out. If
-                    // they click No, we redisplay the File Dialog
-                    done = mb.open() == SWT.YES;
-                  } else {
-                    // File does not exist, so we're good to go
                     done = true;
-                  }
+                    return;
+                } else {
+                    // User has selected a file; see if it already exists
+                    File file = new File(fileName);
+                    if (file.exists()) {
+                        // The file already exists; asks for confirmation
+                        MessageBox mb = new MessageBox(exportDialog.getParent(),
+                                SWT.ICON_WARNING | SWT.YES | SWT.NO);
+
+                        mb.setMessage(fileName + Messages.ValidationDialog_fileExists);
+
+                        // If they click Yes, we're done and we drop out. If
+                        // they click No, we redisplay the File Dialog
+                        done = mb.open() == SWT.YES;
+                    } else {
+                        // File does not exist, so we're good to go
+                        done = true;
+                    }
                 }
             }
-            
-            //construct a writer
+
+            // construct a writer
             Writer writer;
             try {
                 writer = new FileWriter(fileName, false);
@@ -1385,34 +1428,35 @@ public class ValidationDialog extends TitleAreaDialog {
                 // TODO Handle IOException
                 throw (RuntimeException) new RuntimeException().initCause(e1);
             }
-            //write the file
+            // write the file
             XMLWriter.writeTestSuite(testSuite, writer);
         }
-    
+
+        @Override
         public void widgetDefaultSelected(SelectionEvent e) {
             widgetSelected(e);
         }
     }
 
     /**
-     * Retrieves the ValidationProcessor object from the blackboard, or null if one does not exist. 
+     * Retrieves the ValidationProcessor object from the blackboard, or null if one does not exist.
      *
      * @param map
      * @return
      */
     private ValidationProcessor loadDialogState(IMap map) {
         Object currentState = map.getBlackboard().get(BLACKBOARD_KEY);
-        if (currentState instanceof ValidationProcessor) 
+        if (currentState instanceof ValidationProcessor)
             return (ValidationProcessor) currentState;
         else
             return null;
     }
-    
+
     /**
-     * Saves the ValidationProcessor object on the blackboard, so we can restore
-     * the state of the validation dialog the next time the dialog is opened.
-     * 
-     * @param validationProcessor 
+     * Saves the ValidationProcessor object on the blackboard, so we can restore the state of the
+     * validation dialog the next time the dialog is opened.
+     *
+     * @param validationProcessor
      * @param map
      */
     private void saveDialogState(ValidationProcessor validationProcessor, IMap map) {
